--- a/src/Catty/Resources/Localization/sw.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/sw.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "About Pocket Code" = "Kuhusu Msimbo wa Mfukoni";
 
 /* No comment provided by engineer. */
+"absolute value" = "absolute value";
+
+/* No comment provided by engineer. */
 "acceleration x" = "mchapuko_x";
 
 /* No comment provided by engineer. */
@@ -101,6 +104,15 @@
 "April" = "Aprili";
 
 /* No comment provided by engineer. */
+"arccosine" = "arccosine";
+
+/* No comment provided by engineer. */
+"arcsine" = "arcsine";
+
+/* No comment provided by engineer. */
+"arctangent" = "arctangent";
+
+/* No comment provided by engineer. */
 "Arduino" = "Arduino";
 
 /* No comment provided by engineer. */
@@ -169,11 +181,11 @@
 /* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
-/* paint */
-"Blue" = "Bluu";
-
 /* No comment provided by engineer. */
 "blue" = "Bluu";
+
+/* paint */
+"Blue" = "Bluu";
 
 /* No comment provided by engineer. */
 "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings." = "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings.";
@@ -230,7 +242,7 @@
 "Catrobat community" = "Catrobat community";
 
 /* No comment provided by engineer. */
-"ceil" = "ubao wa paa";
+"ceiling" = "ubao wa paa";
 
 /* No comment provided by engineer. */
 "Cello" = "Cello";
@@ -299,6 +311,9 @@
 "color" = "rangi";
 
 /* No comment provided by engineer. */
+"Comparison operators" = "vikokotoa mfanano";
+
+/* No comment provided by engineer. */
 "compass" = "dira";
 
 /* No comment provided by engineer. */
@@ -341,6 +356,9 @@
 "Copy" = "Nakili";
 
 /* No comment provided by engineer. */
+"Copy actors or objects" = "Copy actors or objects";
+
+/* No comment provided by engineer. */
 "Copy brick" = "Copy brick";
 
 /* No comment provided by engineer. */
@@ -350,10 +368,19 @@
 "Copy project" = "Copy project";
 
 /* No comment provided by engineer. */
+"cosine" = "cosine";
+
+/* No comment provided by engineer. */
 "Create account" = "Unda akaunti";
 
 /* No comment provided by engineer. */
+"Create patterns for stiching machines" = "Create patterns for stiching machines";
+
+/* No comment provided by engineer. */
 "Data" = "Data";
+
+/* No comment provided by engineer. */
+"Date and time" = "Tarehe na saa";
 
 /* No comment provided by engineer. */
 "day" = "siku";
@@ -366,6 +393,9 @@
 
 /* No comment provided by engineer. */
 "December" = "Desemba";
+
+/* No comment provided by engineer. */
+"decimal logarithm" = "decimal logarithm";
 
 /* No comment provided by engineer. */
 "degrees" = "nyuzi";
@@ -461,6 +491,9 @@
 "device motion-sensor" = "device motion-sensor";
 
 /* No comment provided by engineer. */
+"Device sensors" = "kifaa kihisi";
+
+/* No comment provided by engineer. */
 "direction" = "mwelekeo";
 
 /* No comment provided by engineer. */
@@ -479,6 +512,9 @@
 "Disagree" = "Disagree";
 
 /* No comment provided by engineer. */
+"Discard changes" = "Discard changes";
+
+/* No comment provided by engineer. */
 "Disconnect all devices" = "Tenganisha vifaa vyote";
 
 /* No comment provided by engineer. */
@@ -488,7 +524,7 @@
 "Do you really want to delete the current drawing?" = "Kweli unataka kufuta mchoro wa sasa?";
 
 /* paint */
-"Do you want to save the changes" = "Je, unataka kuhifadhi mabadiliko";
+"Do you want to save your changes?" = "Je, unataka kuhifadhi madiliko yako?";
 
 /* No comment provided by engineer. */
 "don't rotate" = "usizungushe";
@@ -498,9 +534,6 @@
 
 /* No comment provided by engineer. */
 "Download" = "Pakua";
-
-/* No comment provided by engineer. */
-"Download successful" = "Kupakua kumefaulu";
 
 /* No comment provided by engineer. */
 "Downloads" = "Vipakuliwa";
@@ -569,6 +602,12 @@
 "Email" = "Baruapepe";
 
 /* No comment provided by engineer. */
+"Embroidery" = "Embroidery";
+
+/* No comment provided by engineer. */
+"Embroidery extension" = "Embroidery extension";
+
+/* No comment provided by engineer. */
 "Empty input!" = "Empty input!";
 
 /* No comment provided by engineer. */
@@ -623,10 +662,16 @@
 "Error" = "Dosari";
 
 /* No comment provided by engineer. */
+"Error occurred while reporting the project. Please try again later." = "Error occurred while reporting the project. Please try again later.";
+
+/* No comment provided by engineer. */
 "Error saving file" = "Error saving file";
 
 /* No comment provided by engineer. */
 "Event" = "Tukio";
+
+/* No comment provided by engineer. */
+"exponent" = "exponent";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -704,6 +749,9 @@
 "Forgot password" = "Umesahau nenosiri";
 
 /* No comment provided by engineer. */
+"Formula Editor" = "Formula Editor";
+
+/* No comment provided by engineer. */
 "Formula too long!" = "Fomula ni ndefu sana!";
 
 /* No comment provided by engineer. */
@@ -725,6 +773,12 @@
 "Front camera" = "Kamera ya mbele";
 
 /* No comment provided by engineer. */
+"Functions" = "Kazi";
+
+/* No comment provided by engineer. */
+"General properties" = "Sifa za jumla";
+
+/* No comment provided by engineer. */
 "Glide" = "bimbilika";
 
 /* No comment provided by engineer. */
@@ -736,11 +790,11 @@
 /* No comment provided by engineer. */
 "Go to front" = "Nenda mbele";
 
-/* paint */
-"Green" = "Kijani";
-
 /* No comment provided by engineer. */
 "green" = "Kijani";
+
+/* paint */
+"Green" = "Kijani";
 
 /* No comment provided by engineer. */
 "Guitar" = "Guitar";
@@ -827,6 +881,9 @@
 "italic" = "italiki";
 
 /* No comment provided by engineer. */
+"item" = "elementi";
+
+/* No comment provided by engineer. */
 "Jan" = "Jan";
 
 /* No comment provided by engineer. */
@@ -878,10 +935,10 @@
 "left-right only" = "kushoto-kulia tu";
 
 /* No comment provided by engineer. */
-"Length" = "Urefu";
+"length" = "urefu";
 
 /* No comment provided by engineer. */
-"length" = "urefu";
+"Length" = "Urefu";
 
 /* No comment provided by engineer. */
 "letter" = "barua";
@@ -899,6 +956,12 @@
 "Lists" = "Orodha";
 
 /* No comment provided by engineer. */
+"Lists for all actors and objects" = "Lists for all actors and objects";
+
+/* No comment provided by engineer. */
+"Lists for this actor or object only" = "Lists for this actor or object only";
+
+/* No comment provided by engineer. */
 "Loading" = "Inapakia";
 
 /* No comment provided by engineer. */
@@ -909,6 +972,9 @@
 
 /* No comment provided by engineer. */
 "Logic" = "Mantiki";
+
+/* No comment provided by engineer. */
+"Logical (Boolean) operators and constants" = "vikokotoa logiki";
 
 /* No comment provided by engineer. */
 "Login" = "Ingia";
@@ -922,11 +988,11 @@
 /* No comment provided by engineer. */
 "longitude" = "longitudo";
 
-/* No comment provided by engineer. */
-"Look" = "Angalia";
-
 /* LOOK */
 "look" = "mwonekano";
+
+/* No comment provided by engineer. */
+"Look" = "Angalia";
 
 /* No comment provided by engineer. */
 "look name" = "tazama_jina";
@@ -953,7 +1019,13 @@
 "Marimba" = "Marimba";
 
 /* No comment provided by engineer. */
-"Math" = "Hesabu";
+"Maths" = "Hesabu";
+
+/* No comment provided by engineer. */
+"Maximize" = "Maximize";
+
+/* No comment provided by engineer. */
+"maximum of" = "upeo";
 
 /* No comment provided by engineer. */
 "May" = "Mei";
@@ -977,6 +1049,12 @@
 "MI" = "MI";
 
 /* No comment provided by engineer. */
+"Minimize" = "Minimize";
+
+/* No comment provided by engineer. */
+"minimum of" = "chini";
+
+/* No comment provided by engineer. */
 "minute" = "dakika";
 
 /* paint */
@@ -984,6 +1062,9 @@
 
 /* No comment provided by engineer. */
 "Mo" = "Mo";
+
+/* No comment provided by engineer. */
+"modulo" = "modulo";
 
 /* Prefix of default catrobat project object names (except background object) */
 "Mole" = "Mole";
@@ -1008,6 +1089,9 @@
 
 /* No comment provided by engineer. */
 "Motion" = "Mwendo";
+
+/* No comment provided by engineer. */
+"Motion properties" = "mwendo mali";
 
 /* No comment provided by engineer. */
 "Move" = "Hamisha";
@@ -1049,6 +1133,9 @@
 "Name already exists." = "Name already exists.";
 
 /* No comment provided by engineer. */
+"natural logarithm" = "natural logarithm";
+
+/* No comment provided by engineer. */
 "New" = "Mpya";
 
 /* paint */
@@ -1058,7 +1145,7 @@
 "New list" = "Orodha mpya";
 
 /* No comment provided by engineer. */
-"New message" = "Ujumbe mpya\n";
+"New message" = "Ujumbe mpya";
 
 /* No comment provided by engineer. */
 "New project" = "Mpya";
@@ -1112,9 +1199,6 @@
 "not available. Continue anyway?" = "haipatikani. Hata hivyo Endelea?";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this project. Please delete some of your projects" = "Not enough free memory to download this project. Please delete some of your projects";
-
-/* No comment provided by engineer. */
 "Not enough Memory" = "Hakuna kumbukumbu ya kutosha";
 
 /* No comment provided by engineer. */
@@ -1139,13 +1223,7 @@
 "Object" = "Kipengee";
 
 /* No comment provided by engineer. */
-"Object lists:" = "Object lists:";
-
-/* No comment provided by engineer. */
 "Object or actor name" = "Object or actor name";
-
-/* No comment provided by engineer. */
-"Object variables:" = "Vitofautishi vya kipengee:";
 
 /* No comment provided by engineer. */
 "Oct" = "Oct";
@@ -1218,6 +1296,9 @@
 
 /* No comment provided by engineer. */
 "phiro side right" = "phiro side right";
+
+/* No comment provided by engineer. */
+"pi" = "pi";
 
 /* No comment provided by engineer. */
 "Piano" = "Piano";
@@ -1304,6 +1385,9 @@
 "position y" = "nafasi_y";
 
 /* No comment provided by engineer. */
+"power" = "nguvu";
+
+/* No comment provided by engineer. */
 "Preview" = "Ona mwoneko awali";
 
 /* No comment provided by engineer. */
@@ -1319,16 +1403,10 @@
 "Project" = "Mradi";
 
 /* No comment provided by engineer. */
-"Project lists:" = "Project lists:";
-
-/* No comment provided by engineer. */
 "Project name" = "Project name";
 
 /* No comment provided by engineer. */
 "Project Name is necessary!" = "Project Name is necessary!";
-
-/* No comment provided by engineer. */
-"Project variables:" = "Project variables:";
 
 /* No comment provided by engineer. */
 "Projects" = "Programu";
@@ -1337,7 +1415,13 @@
 "Projects on device" = "Programu";
 
 /* No comment provided by engineer. */
+"Properties" = "Kipengee";
+
+/* No comment provided by engineer. */
 "random position" = "Nafasi nasibu";
+
+/* No comment provided by engineer. */
+"random value from to" = "ovyo/nasibu";
 
 /* No comment provided by engineer. */
 "Rate Us" = "Tukadirie";
@@ -1351,17 +1435,20 @@
 /* paint */
 "Rectangle / Square" = "Mstatili/Mraba";
 
-/* No comment provided by engineer. */
-"red" = "Nyekundu";
-
 /* paint */
 "Red" = "Nyekunduu";
+
+/* No comment provided by engineer. */
+"red" = "Nyekundu";
 
 /* No comment provided by engineer. */
 "Register" = "Jisajili";
 
 /* No comment provided by engineer. */
 "Registration successful" = "Usajili umefanikiwa";
+
+/* No comment provided by engineer. */
+"regular expression" = "regular expression";
 
 /* No comment provided by engineer. */
 "Remove known devices" = "Ondoa vifaa vinavyojulikana";
@@ -1417,11 +1504,11 @@
 /* No comment provided by engineer. */
 "Saturday" = "Jumamosi";
 
+/* No comment provided by engineer. */
+"Save changes" = "Save changes";
+
 /* paint */
 "Save to Photos" = "Save to Photos";
-
-/* No comment provided by engineer. */
-"Save to PocketCode" = "Hifadhi kwenye Msimbo wa Mfukoni";
 
 /* No comment provided by engineer. */
 "Saved" = "Hifadhiwa";
@@ -1535,6 +1622,9 @@
 "Set size to" = "Weka ukubwa kuwa";
 
 /* No comment provided by engineer. */
+"Set tempo to" = "Set tempo to";
+
+/* No comment provided by engineer. */
 "Set transparency " = "Weka uwazi ";
 
 /* No comment provided by engineer. */
@@ -1560,6 +1650,9 @@
 
 /* No comment provided by engineer. */
 "Show variable" = "Onyesha kitofautishi";
+
+/* No comment provided by engineer. */
+"sine" = "sine";
 
 /* No comment provided by engineer. */
 "size" = "ukubwa";
@@ -1591,11 +1684,11 @@
 /* No comment provided by engineer. */
 "Speed" = "Kasi";
 
-/* No comment provided by engineer. */
-"sqrt" = "sqrt";
-
 /* paint */
 "square" = "mraba";
+
+/* No comment provided by engineer. */
+"square root" = "sqrt";
 
 /* No comment provided by engineer. */
 "stage is touched" = "skrini_ime_guswa";
@@ -1628,6 +1721,9 @@
 "steps" = "hatua";
 
 /* No comment provided by engineer. */
+"Stitch" = "Stitch";
+
+/* No comment provided by engineer. */
 "Stop all sounds" = "Komesha sauti zote";
 
 /* No comment provided by engineer. */
@@ -1643,6 +1739,9 @@
 "Switch to look" = "Nenda kwa muonekano";
 
 /* No comment provided by engineer. */
+"Switch to look with number" = "Nenda kwa muonekano wenye namba";
+
+/* No comment provided by engineer. */
 "Syntax Error!" = "Kosa la kisintaksia!";
 
 /* No comment provided by engineer. */
@@ -1650,6 +1749,9 @@
 
 /* No comment provided by engineer. */
 "Synth Pad" = "Synth Pad";
+
+/* No comment provided by engineer. */
+"tangent" = "tangent";
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add actors or objects" = "Tap \"+\" to add actors or objects";
@@ -1665,6 +1767,9 @@
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add sounds" = "Bofya \"+\" kuongeza sauti";
+
+/* No comment provided by engineer. */
+"Tap \"+\" to add variables and lists" = "Tap \"+\" to add variables and lists";
 
 /* Button title at the settings screen to get to the terms of use and service. */
 "Terms of Use and Service" = "Masharti ya matumizi na huduma";
@@ -1698,9 +1803,6 @@
 
 /* No comment provided by engineer. */
 "The recent projects cannot be loaded" = "The recent projects cannot be loaded";
-
-/* No comment provided by engineer. */
-"The requested project can not be found. Please choose a different one." = "The requested project can not be found. Please choose a different one.";
 
 /* No comment provided by engineer. */
 "The requested project can not be loaded. Please try again later." = "The requested project can not be loaded. Please try again later.";
@@ -1757,6 +1859,9 @@
 "Today" = "Leo";
 
 /* No comment provided by engineer. */
+"Touch detection" = "Gusa kigunduzi";
+
+/* No comment provided by engineer. */
 "touch position" = "Gusa nafasi";
 
 /* No comment provided by engineer. */
@@ -1785,6 +1890,9 @@
 
 /* No comment provided by engineer. */
 "Turn right" = "Geuka kulia";
+
+/* No comment provided by engineer. */
+"Unable to import project!" = "Unable to import project!";
 
 /* No comment provided by engineer. */
 "Unable to load project!" = "Unable to load project!";
@@ -1856,9 +1964,6 @@
 "Username must not be blank" = "Username must not be blank";
 
 /* No comment provided by engineer. */
-"Var/List" = "Var/List";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Jina la kitofautishi:";
 
 /* No comment provided by engineer. */
@@ -1869,6 +1974,12 @@
 
 /* No comment provided by engineer. */
 "Variables" = "Kitofautishi";
+
+/* No comment provided by engineer. */
+"Variables for all actors and objects" = "Variables for all actors and objects";
+
+/* No comment provided by engineer. */
+"Variables for this actor or object only" = "Variables for this actor or object only";
 
 /* No comment provided by engineer. */
 "Version" = "Toleo";
@@ -1887,6 +1998,9 @@
 
 /* No comment provided by engineer. */
 "Views" = "Angalia";
+
+/* No comment provided by engineer. */
+"Visual sensors" = "Visual sensors";
 
 /* No comment provided by engineer. */
 "Wait" = "Subiri";
@@ -1962,6 +2076,9 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
+
+/* No comment provided by engineer. */
+"Your report was successfully sent!" = "Your report was successfully sent!";
 
 /* paint */
 "Zoom" = "Zoom";
