--- a/src/Catty/Resources/Localization/bn.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/bn.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "About Pocket Code" = "পকেট কোড সম্পর্কে";
 
 /* No comment provided by engineer. */
+"absolute value" = "absolute value";
+
+/* No comment provided by engineer. */
 "acceleration x" = "ত্বরণ x";
 
 /* No comment provided by engineer. */
@@ -101,6 +104,15 @@
 "April" = "এপ্রিল";
 
 /* No comment provided by engineer. */
+"arccosine" = "arccosine";
+
+/* No comment provided by engineer. */
+"arcsine" = "arcsine";
+
+/* No comment provided by engineer. */
+"arctangent" = "arctangent";
+
+/* No comment provided by engineer. */
 "Arduino" = "আরডুইনো";
 
 /* No comment provided by engineer. */
@@ -169,11 +181,11 @@
 /* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
-/* paint */
-"Blue" = "নীল";
-
 /* No comment provided by engineer. */
 "blue" = "নীল";
+
+/* paint */
+"Blue" = "নীল";
 
 /* No comment provided by engineer. */
 "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings." = "ব্লোটুথ পাওয়া যায় নি। হয় আপনার ডিভাইস ব্লোটুথ 4.0 সমর্থন করে না বা আপনার ব্লোটুথ চিপ ক্ষতিগ্রস্থ হয়েছে। সেটিংসে অন্য ব্লোটুথ ডিভাইসের সাথে সংযোগ করে এটি পরীক্ষা করুন।";
@@ -230,7 +242,7 @@
 "Catrobat community" = "ক্যাট্রোব্যাট সম্প্রদায়";
 
 /* No comment provided by engineer. */
-"ceil" = "সেইল";
+"ceiling" = "ছাদ";
 
 /* No comment provided by engineer. */
 "Cello" = "Cello";
@@ -299,6 +311,9 @@
 "color" = "রং";
 
 /* No comment provided by engineer. */
+"Comparison operators" = "তুলনা অপারেটর";
+
+/* No comment provided by engineer. */
 "compass" = "কম্পাস";
 
 /* No comment provided by engineer. */
@@ -341,6 +356,9 @@
 "Copy" = "অনুলিপি";
 
 /* No comment provided by engineer. */
+"Copy actors or objects" = "Copy actors or objects";
+
+/* No comment provided by engineer. */
 "Copy brick" = "Copy brick";
 
 /* No comment provided by engineer. */
@@ -350,10 +368,19 @@
 "Copy project" = "প্রজেক্ট অনুলিপি করুন";
 
 /* No comment provided by engineer. */
+"cosine" = "cosine";
+
+/* No comment provided by engineer. */
 "Create account" = "অ্যাকাউন্ট তৈরি করুন";
 
 /* No comment provided by engineer. */
+"Create patterns for stiching machines" = "Create patterns for stiching machines";
+
+/* No comment provided by engineer. */
 "Data" = "তথ্য";
+
+/* No comment provided by engineer. */
+"Date and time" = "তারিখ এবং সময়";
 
 /* No comment provided by engineer. */
 "day" = "দিন";
@@ -366,6 +393,9 @@
 
 /* No comment provided by engineer. */
 "December" = "ডিসেম্বর";
+
+/* No comment provided by engineer. */
+"decimal logarithm" = "decimal logarithm";
 
 /* No comment provided by engineer. */
 "degrees" = "ডিগ্রী";
@@ -461,6 +491,9 @@
 "device motion-sensor" = "ডিভাইস গতি সেন্সর";
 
 /* No comment provided by engineer. */
+"Device sensors" = "ডিভাইস সেন্সর";
+
+/* No comment provided by engineer. */
 "direction" = "গতিপথ";
 
 /* No comment provided by engineer. */
@@ -479,6 +512,9 @@
 "Disagree" = "রাজি না";
 
 /* No comment provided by engineer. */
+"Discard changes" = "Discard changes";
+
+/* No comment provided by engineer. */
 "Disconnect all devices" = "সমস্ত ডিভাইস সংযোগ বিচ্ছিন্ন করুন";
 
 /* No comment provided by engineer. */
@@ -488,7 +524,7 @@
 "Do you really want to delete the current drawing?" = "আপনি কি সত্যিই বর্তমান অঙ্কনটি মুছতে চান?";
 
 /* paint */
-"Do you want to save the changes" = "আপনি কি পরিবর্তনগুলি সংরক্ষণ করতে চান?";
+"Do you want to save your changes?" = "আপনি কি আপনার পরিবর্তনগুলি সংরক্ষণ করতে চান?";
 
 /* No comment provided by engineer. */
 "don't rotate" = "ঘোরাবেন না";
@@ -498,9 +534,6 @@
 
 /* No comment provided by engineer. */
 "Download" = "ডাউনলোড";
-
-/* No comment provided by engineer. */
-"Download successful" = "ডাউনলোড সফল";
 
 /* No comment provided by engineer. */
 "Downloads" = "ডাউনলোডসমূহ";
@@ -569,6 +602,12 @@
 "Email" = "ই-মেইল";
 
 /* No comment provided by engineer. */
+"Embroidery" = "সূচিকর্ম";
+
+/* No comment provided by engineer. */
+"Embroidery extension" = "এমব্রয়ডারি এক্সটেনশন";
+
+/* No comment provided by engineer. */
 "Empty input!" = "খালি ইনপুট!";
 
 /* No comment provided by engineer. */
@@ -623,10 +662,16 @@
 "Error" = "ভুল";
 
 /* No comment provided by engineer. */
+"Error occurred while reporting the project. Please try again later." = "Error occurred while reporting the project. Please try again later.";
+
+/* No comment provided by engineer. */
 "Error saving file" = "ফাইল সংরক্ষণে ভুল";
 
 /* No comment provided by engineer. */
 "Event" = "ঘটনা";
+
+/* No comment provided by engineer. */
+"exponent" = "exponent";
 
 /* No comment provided by engineer. */
 "FA" = "এফএ";
@@ -704,6 +749,9 @@
 "Forgot password" = "পাসওয়ার্ড ভুলে গেছেন ";
 
 /* No comment provided by engineer. */
+"Formula Editor" = "Formula Editor";
+
+/* No comment provided by engineer. */
 "Formula too long!" = "সূত্রটি অনেক দীর্ঘ!";
 
 /* No comment provided by engineer. */
@@ -725,6 +773,12 @@
 "Front camera" = "সামনের ক্যামেরা";
 
 /* No comment provided by engineer. */
+"Functions" = "ক্রিয়াকলাপ";
+
+/* No comment provided by engineer. */
+"General properties" = "সাধারণ বৈশিষ্ট্য";
+
+/* No comment provided by engineer. */
 "Glide" = "ধীরে ভাসিয়া চলা";
 
 /* No comment provided by engineer. */
@@ -736,11 +790,11 @@
 /* No comment provided by engineer. */
 "Go to front" = "সামনে যান";
 
-/* paint */
-"Green" = "সবুজ";
-
 /* No comment provided by engineer. */
 "green" = "সবুজ";
+
+/* paint */
+"Green" = "সবুজ";
 
 /* No comment provided by engineer. */
 "Guitar" = "Guitar";
@@ -827,6 +881,9 @@
 "italic" = "ইটালিক";
 
 /* No comment provided by engineer. */
+"item" = "বস্তু";
+
+/* No comment provided by engineer. */
 "Jan" = "জানুয়ারি";
 
 /* No comment provided by engineer. */
@@ -878,10 +935,10 @@
 "left-right only" = "শুধুমাত্র বাম-ডান";
 
 /* No comment provided by engineer. */
-"Length" = "দৈর্ঘ্য";
+"length" = "দৈর্ঘ্য";
 
 /* No comment provided by engineer. */
-"length" = "দৈর্ঘ্য";
+"Length" = "দৈর্ঘ্য";
 
 /* No comment provided by engineer. */
 "letter" = "চিঠি";
@@ -899,6 +956,12 @@
 "Lists" = "তালিকা";
 
 /* No comment provided by engineer. */
+"Lists for all actors and objects" = "সমস্ত অভিনেতা এবং অবজেক্টের জন্য তালিকা";
+
+/* No comment provided by engineer. */
+"Lists for this actor or object only" = "কেবল এই অভিনেতা বা অবজেক্টের জন্য তালিকা";
+
+/* No comment provided by engineer. */
 "Loading" = "লোড হচ্ছে...";
 
 /* No comment provided by engineer. */
@@ -909,6 +972,9 @@
 
 /* No comment provided by engineer. */
 "Logic" = "যুক্তিবিদ্যা";
+
+/* No comment provided by engineer. */
+"Logical (Boolean) operators and constants" = "লজিকাল (বুলিয়ান) অপারেটর এবং ধ্রুবক";
 
 /* No comment provided by engineer. */
 "Login" = "প্রবেশ করুন";
@@ -922,11 +988,11 @@
 /* No comment provided by engineer. */
 "longitude" = "দ্রাঘিমাংশ";
 
-/* No comment provided by engineer. */
-"Look" = "চেহারা";
-
 /* LOOK */
 "look" = "চেহারা";
+
+/* No comment provided by engineer. */
+"Look" = "চেহারা";
 
 /* No comment provided by engineer. */
 "look name" = "নাম দেখুন";
@@ -953,7 +1019,13 @@
 "Marimba" = "Marimba";
 
 /* No comment provided by engineer. */
-"Math" = "গণিত";
+"Maths" = "গণিত";
+
+/* No comment provided by engineer. */
+"Maximize" = "Maximize";
+
+/* No comment provided by engineer. */
+"maximum of" = "সর্বাধিক";
 
 /* No comment provided by engineer. */
 "May" = "মে";
@@ -977,6 +1049,12 @@
 "MI" = "MI";
 
 /* No comment provided by engineer. */
+"Minimize" = "Minimize";
+
+/* No comment provided by engineer. */
+"minimum of" = "সর্বনিম্ন";
+
+/* No comment provided by engineer. */
 "minute" = "মিনিট";
 
 /* paint */
@@ -984,6 +1062,9 @@
 
 /* No comment provided by engineer. */
 "Mo" = "Mo";
+
+/* No comment provided by engineer. */
+"modulo" = "modulo";
 
 /* Prefix of default catrobat project object names (except background object) */
 "Mole" = "অণু";
@@ -1008,6 +1089,9 @@
 
 /* No comment provided by engineer. */
 "Motion" = "গতি";
+
+/* No comment provided by engineer. */
+"Motion properties" = "গতি বৈশিষ্ট্য";
 
 /* No comment provided by engineer. */
 "Move" = "স্থানান্তর";
@@ -1047,6 +1131,9 @@
 
 /* No comment provided by engineer. */
 "Name already exists." = "নামটি ইতিমধ্যেই বিদ্যমান।.";
+
+/* No comment provided by engineer. */
+"natural logarithm" = "natural logarithm";
 
 /* No comment provided by engineer. */
 "New" = "নতুন";
@@ -1112,9 +1199,6 @@
 "not available. Continue anyway?" = "পাওয়া যায় না. তাহলেও চালিয়ে যেতে চান?";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this project. Please delete some of your projects" = "এই প্রজেক্টটি ডাউনলোড করার জন্য পর্যাপ্ত জায়গা নেই। আপনার কিছু প্রজেক্ট মুছুন";
-
-/* No comment provided by engineer. */
 "Not enough Memory" = "পর্যাপ্ত মেমরি নেই";
 
 /* No comment provided by engineer. */
@@ -1139,13 +1223,7 @@
 "Object" = "অবজেক্ট";
 
 /* No comment provided by engineer. */
-"Object lists:" = "অবজেক্টের তালিকা:";
-
-/* No comment provided by engineer. */
 "Object or actor name" = "Object or actor name";
-
-/* No comment provided by engineer. */
-"Object variables:" = "অবজেক্ট ভেরিয়েবল:";
 
 /* No comment provided by engineer. */
 "Oct" = "অক্টোবর";
@@ -1218,6 +1296,9 @@
 
 /* No comment provided by engineer. */
 "phiro side right" = "phiro side right";
+
+/* No comment provided by engineer. */
+"pi" = "pi";
 
 /* No comment provided by engineer. */
 "Piano" = "Piano";
@@ -1304,6 +1385,9 @@
 "position y" = "অবস্থান y";
 
 /* No comment provided by engineer. */
+"power" = "ক্ষমতা";
+
+/* No comment provided by engineer. */
 "Preview" = "পূর্বরূপ";
 
 /* No comment provided by engineer. */
@@ -1319,16 +1403,10 @@
 "Project" = "প্রজেক্ট";
 
 /* No comment provided by engineer. */
-"Project lists:" = "প্রজেক্টের তালিকা:";
-
-/* No comment provided by engineer. */
 "Project name" = "প্রজেক্টের নাম";
 
 /* No comment provided by engineer. */
 "Project Name is necessary!" = "প্রজেক্টের নাম প্রয়োজন!";
-
-/* No comment provided by engineer. */
-"Project variables:" = "প্রজেক্টের ভেরিয়েবলসমূহ";
 
 /* No comment provided by engineer. */
 "Projects" = "প্রজেক্টসমূহ";
@@ -1337,7 +1415,13 @@
 "Projects on device" = "ডিভাইসে প্রজেক্টগুলি";
 
 /* No comment provided by engineer. */
+"Properties" = "বিশিষ্টতাসমূহ";
+
+/* No comment provided by engineer. */
 "random position" = "এলোমেলো অবস্থান";
+
+/* No comment provided by engineer. */
+"random value from to" = "থেকে এলোমেলো মান";
 
 /* No comment provided by engineer. */
 "Rate Us" = "আমাদের মতামত দিন";
@@ -1351,17 +1435,20 @@
 /* paint */
 "Rectangle / Square" = "আয়তক্ষেত্র / স্কোয়ার";
 
-/* No comment provided by engineer. */
-"red" = "লাল";
-
 /* paint */
 "Red" = "লাল";
+
+/* No comment provided by engineer. */
+"red" = "লাল";
 
 /* No comment provided by engineer. */
 "Register" = "নিবন্ধন";
 
 /* No comment provided by engineer. */
 "Registration successful" = "নিবন্ধন সফল";
+
+/* No comment provided by engineer. */
+"regular expression" = "নিয়মিত অভিব্যক্তি";
 
 /* No comment provided by engineer. */
 "Remove known devices" = "পরিচিত ডিভাইসগুলি সরান";
@@ -1417,11 +1504,11 @@
 /* No comment provided by engineer. */
 "Saturday" = "শনিবার";
 
+/* No comment provided by engineer. */
+"Save changes" = "Save changes";
+
 /* paint */
 "Save to Photos" = "Save to Photos";
-
-/* No comment provided by engineer. */
-"Save to PocketCode" = "পকেট কোড সংরক্ষণ করুন";
 
 /* No comment provided by engineer. */
 "Saved" = "সংরক্ষিত";
@@ -1535,6 +1622,9 @@
 "Set size to" = "আকার সেট করুন";
 
 /* No comment provided by engineer. */
+"Set tempo to" = "টেম্পো সেট করুন";
+
+/* No comment provided by engineer. */
 "Set transparency " = "স্বচ্ছতা সেট করুন";
 
 /* No comment provided by engineer. */
@@ -1560,6 +1650,9 @@
 
 /* No comment provided by engineer. */
 "Show variable" = "ভেরিয়েবল দেখান";
+
+/* No comment provided by engineer. */
+"sine" = "sine";
 
 /* No comment provided by engineer. */
 "size" = "আকার";
@@ -1591,11 +1684,11 @@
 /* No comment provided by engineer. */
 "Speed" = "গতি";
 
-/* No comment provided by engineer. */
-"sqrt" = "বর্গমূল";
-
 /* paint */
 "square" = "বর্গক্ষেত্র";
+
+/* No comment provided by engineer. */
+"square root" = "বর্গমূল";
 
 /* No comment provided by engineer. */
 "stage is touched" = "মঞ্চ স্পর্শ করা হয়";
@@ -1628,6 +1721,9 @@
 "steps" = "ধাপসমূহ";
 
 /* No comment provided by engineer. */
+"Stitch" = "সেলাই";
+
+/* No comment provided by engineer. */
 "Stop all sounds" = "সমস্ত শব্দ বন্ধ করুন";
 
 /* No comment provided by engineer. */
@@ -1643,6 +1739,9 @@
 "Switch to look" = "চেহারা পরিবর্তন করুন";
 
 /* No comment provided by engineer. */
+"Switch to look with number" = "নম্বর সহ চেহারা পরিবর্তন করুন";
+
+/* No comment provided by engineer. */
 "Syntax Error!" = "ব্যাকরণগত ভুল";
 
 /* No comment provided by engineer. */
@@ -1650,6 +1749,9 @@
 
 /* No comment provided by engineer. */
 "Synth Pad" = "Synth Pad";
+
+/* No comment provided by engineer. */
+"tangent" = "tangent";
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add actors or objects" = "স্ক্রিপ্টগুলি যুক্ত করতে \"+\" আলতো চাপুন";
@@ -1665,6 +1767,9 @@
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add sounds" = "শব্দ যোগ করতে \"+\" আলতো চাপুন";
+
+/* No comment provided by engineer. */
+"Tap \"+\" to add variables and lists" = "Tap \"+\" to add variables and lists";
 
 /* Button title at the settings screen to get to the terms of use and service. */
 "Terms of Use and Service" = "ব্যবহার এবং সেবার শর্তাদি";
@@ -1698,9 +1803,6 @@
 
 /* No comment provided by engineer. */
 "The recent projects cannot be loaded" = "সাম্প্রতিক প্রজেক্টগুলি লোড করা যায় না";
-
-/* No comment provided by engineer. */
-"The requested project can not be found. Please choose a different one." = "অনুরোধ করা প্রজেক্টটি পাওয়া যাবে না। দয়া করে অন্য একটি নির্বাচন করুন ।";
 
 /* No comment provided by engineer. */
 "The requested project can not be loaded. Please try again later." = "অনুরোধ করা প্রজেক্টটি লোড করা যায় না। পরে আবার চেষ্টা করুন.";
@@ -1757,6 +1859,9 @@
 "Today" = "আজ";
 
 /* No comment provided by engineer. */
+"Touch detection" = "স্পর্শ সনাক্তকরণ";
+
+/* No comment provided by engineer. */
 "touch position" = "স্পর্শ অবস্থান";
 
 /* No comment provided by engineer. */
@@ -1785,6 +1890,9 @@
 
 /* No comment provided by engineer. */
 "Turn right" = "ডান দিকে ঘুরুন";
+
+/* No comment provided by engineer. */
+"Unable to import project!" = "Unable to import project!";
 
 /* No comment provided by engineer. */
 "Unable to load project!" = "প্রজেক্ট লোড করতে অক্ষম!";
@@ -1856,9 +1964,6 @@
 "Username must not be blank" = "ব্যবহারকারীর নাম শূন্য থাকবে না ।";
 
 /* No comment provided by engineer. */
-"Var/List" = "ভেরিয়েবল / তালিকা";
-
-/* No comment provided by engineer. */
 "Variable name:" = "ভেরিয়েবল নাম";
 
 /* No comment provided by engineer. */
@@ -1869,6 +1974,12 @@
 
 /* No comment provided by engineer. */
 "Variables" = "ভেরিয়েবল";
+
+/* No comment provided by engineer. */
+"Variables for all actors and objects" = "সমস্ত অভিনেতা এবং অবজেক্টের জন্য ভেরিয়েবল";
+
+/* No comment provided by engineer. */
+"Variables for this actor or object only" = "কেবল এই অভিনেতা এবং অবজেক্টের জন্য ভেরিয়েবল";
 
 /* No comment provided by engineer. */
 "Version" = "সংস্করণ";
@@ -1887,6 +1998,9 @@
 
 /* No comment provided by engineer. */
 "Views" = "দেখুনঃ";
+
+/* No comment provided by engineer. */
+"Visual sensors" = "Visual sensors";
 
 /* No comment provided by engineer. */
 "Wait" = "অপেক্ষা করুন";
@@ -1962,6 +2076,9 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
+
+/* No comment provided by engineer. */
+"Your report was successfully sent!" = "আপনার প্রতিবেদনটি সফলভাবে পাঠানো হয়েছে";
 
 /* paint */
 "Zoom" = "দৃশ্যমান";
