--- a/src/Catty/Resources/Localization/bs.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/bs.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "About Pocket Code" = "O Pocket Code-u";
 
 /* No comment provided by engineer. */
+"absolute value" = "absolute value";
+
+/* No comment provided by engineer. */
 "acceleration x" = "ubrzanje x";
 
 /* No comment provided by engineer. */
@@ -101,6 +104,15 @@
 "April" = "April";
 
 /* No comment provided by engineer. */
+"arccosine" = "arccosine";
+
+/* No comment provided by engineer. */
+"arcsine" = "arcsine";
+
+/* No comment provided by engineer. */
+"arctangent" = "arctangent";
+
+/* No comment provided by engineer. */
 "Arduino" = "Arduino";
 
 /* No comment provided by engineer. */
@@ -169,11 +181,11 @@
 /* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
-/* paint */
-"Blue" = "Plava";
-
 /* No comment provided by engineer. */
 "blue" = "plava";
+
+/* paint */
+"Blue" = "Plava";
 
 /* No comment provided by engineer. */
 "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings." = "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings.";
@@ -230,7 +242,7 @@
 "Catrobat community" = "Catrobat koalicija";
 
 /* No comment provided by engineer. */
-"ceil" = "ceil";
+"ceiling" = "ceiling";
 
 /* No comment provided by engineer. */
 "Cello" = "Cello";
@@ -299,6 +311,9 @@
 "color" = "boja";
 
 /* No comment provided by engineer. */
+"Comparison operators" = "Operatori poređenja";
+
+/* No comment provided by engineer. */
 "compass" = "kompas";
 
 /* No comment provided by engineer. */
@@ -341,6 +356,9 @@
 "Copy" = "Kopirati";
 
 /* No comment provided by engineer. */
+"Copy actors or objects" = "Copy actors or objects";
+
+/* No comment provided by engineer. */
 "Copy brick" = "Copy brick";
 
 /* No comment provided by engineer. */
@@ -350,10 +368,19 @@
 "Copy project" = "Kopirajte projekat";
 
 /* No comment provided by engineer. */
+"cosine" = "cosine";
+
+/* No comment provided by engineer. */
 "Create account" = "Kreirajte račun";
 
 /* No comment provided by engineer. */
+"Create patterns for stiching machines" = "Create patterns for stiching machines";
+
+/* No comment provided by engineer. */
 "Data" = "Podaci";
+
+/* No comment provided by engineer. */
+"Date and time" = "Date and time";
 
 /* No comment provided by engineer. */
 "day" = "dan";
@@ -366,6 +393,9 @@
 
 /* No comment provided by engineer. */
 "December" = "Decembar";
+
+/* No comment provided by engineer. */
+"decimal logarithm" = "decimal logarithm";
 
 /* No comment provided by engineer. */
 "degrees" = "stepeni";
@@ -461,6 +491,9 @@
 "device motion-sensor" = "senzor pokreta uređaja";
 
 /* No comment provided by engineer. */
+"Device sensors" = "Senzori uređaja";
+
+/* No comment provided by engineer. */
 "direction" = "smjer";
 
 /* No comment provided by engineer. */
@@ -479,6 +512,9 @@
 "Disagree" = "Ne slažem se";
 
 /* No comment provided by engineer. */
+"Discard changes" = "Discard changes";
+
+/* No comment provided by engineer. */
 "Disconnect all devices" = "Isključite sve uređaje";
 
 /* No comment provided by engineer. */
@@ -488,7 +524,7 @@
 "Do you really want to delete the current drawing?" = "Želite li zaista da izbrišete ovaj crtež?";
 
 /* paint */
-"Do you want to save the changes" = "Želite li sačuvati promjene";
+"Do you want to save your changes?" = "Da li želiš sačuvati promjene?";
 
 /* No comment provided by engineer. */
 "don't rotate" = "ne rotiraj";
@@ -498,9 +534,6 @@
 
 /* No comment provided by engineer. */
 "Download" = "Preuzmi";
-
-/* No comment provided by engineer. */
-"Download successful" = "Preuzimanje je uspjelo";
 
 /* No comment provided by engineer. */
 "Downloads" = "Preuzimanja";
@@ -569,6 +602,12 @@
 "Email" = "Email";
 
 /* No comment provided by engineer. */
+"Embroidery" = "Vez";
+
+/* No comment provided by engineer. */
+"Embroidery extension" = "Ekstenzija za vez";
+
+/* No comment provided by engineer. */
 "Empty input!" = "Prazan unos!";
 
 /* No comment provided by engineer. */
@@ -623,10 +662,16 @@
 "Error" = "Greška";
 
 /* No comment provided by engineer. */
+"Error occurred while reporting the project. Please try again later." = "Error occurred while reporting the project. Please try again later.";
+
+/* No comment provided by engineer. */
 "Error saving file" = "Greška prilikom spremanja dokumenta";
 
 /* No comment provided by engineer. */
 "Event" = "Događaj";
+
+/* No comment provided by engineer. */
+"exponent" = "exponent";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -704,6 +749,9 @@
 "Forgot password" = "Zaboravili ste šifru";
 
 /* No comment provided by engineer. */
+"Formula Editor" = "Formula Editor";
+
+/* No comment provided by engineer. */
 "Formula too long!" = "Formula je preduga!";
 
 /* No comment provided by engineer. */
@@ -725,6 +773,12 @@
 "Front camera" = "Prednja kamera";
 
 /* No comment provided by engineer. */
+"Functions" = "Funkcije";
+
+/* No comment provided by engineer. */
+"General properties" = "Generalne osobine";
+
+/* No comment provided by engineer. */
 "Glide" = "Klizati";
 
 /* No comment provided by engineer. */
@@ -736,11 +790,11 @@
 /* No comment provided by engineer. */
 "Go to front" = "Idi naprijed";
 
-/* paint */
-"Green" = "Zelena";
-
 /* No comment provided by engineer. */
 "green" = "zelena";
+
+/* paint */
+"Green" = "Zelena";
 
 /* No comment provided by engineer. */
 "Guitar" = "Guitar";
@@ -827,6 +881,9 @@
 "italic" = "italic";
 
 /* No comment provided by engineer. */
+"item" = "stvar";
+
+/* No comment provided by engineer. */
 "Jan" = "Jan";
 
 /* No comment provided by engineer. */
@@ -878,10 +935,10 @@
 "left-right only" = "lijevo-desno samo";
 
 /* No comment provided by engineer. */
-"Length" = "Dužina";
+"length" = "Dužina";
 
 /* No comment provided by engineer. */
-"length" = "Dužina";
+"Length" = "Dužina";
 
 /* No comment provided by engineer. */
 "letter" = "slovo";
@@ -899,6 +956,12 @@
 "Lists" = "Liste";
 
 /* No comment provided by engineer. */
+"Lists for all actors and objects" = "Lista za sve učesnike i objekte";
+
+/* No comment provided by engineer. */
+"Lists for this actor or object only" = "Lista samo za ovog učesnika ili ovaj objekat";
+
+/* No comment provided by engineer. */
 "Loading" = "Učitavanje";
 
 /* No comment provided by engineer. */
@@ -909,6 +972,9 @@
 
 /* No comment provided by engineer. */
 "Logic" = "Logika";
+
+/* No comment provided by engineer. */
+"Logical (Boolean) operators and constants" = "Logički (Boolean) operatori i konstante";
 
 /* No comment provided by engineer. */
 "Login" = "Prijava";
@@ -922,11 +988,11 @@
 /* No comment provided by engineer. */
 "longitude" = "longitude";
 
-/* No comment provided by engineer. */
-"Look" = "izgled";
-
 /* LOOK */
 "look" = "izgled";
+
+/* No comment provided by engineer. */
+"Look" = "izgled";
 
 /* No comment provided by engineer. */
 "look name" = "naziv izgleda";
@@ -953,7 +1019,13 @@
 "Marimba" = "Marimba";
 
 /* No comment provided by engineer. */
-"Math" = "Matematika";
+"Maths" = "Matematika";
+
+/* No comment provided by engineer. */
+"Maximize" = "Maximize";
+
+/* No comment provided by engineer. */
+"maximum of" = "maksimum od";
 
 /* No comment provided by engineer. */
 "May" = "Maj";
@@ -977,6 +1049,12 @@
 "MI" = "MI";
 
 /* No comment provided by engineer. */
+"Minimize" = "Minimize";
+
+/* No comment provided by engineer. */
+"minimum of" = "minimum od";
+
+/* No comment provided by engineer. */
 "minute" = "minuta";
 
 /* paint */
@@ -984,6 +1062,9 @@
 
 /* No comment provided by engineer. */
 "Mo" = "Pon";
+
+/* No comment provided by engineer. */
+"modulo" = "modulo";
 
 /* Prefix of default catrobat project object names (except background object) */
 "Mole" = "Mole";
@@ -1008,6 +1089,9 @@
 
 /* No comment provided by engineer. */
 "Motion" = "Kretanje";
+
+/* No comment provided by engineer. */
+"Motion properties" = "Osobine pokreta";
 
 /* No comment provided by engineer. */
 "Move" = "Pomjeriti";
@@ -1047,6 +1131,9 @@
 
 /* No comment provided by engineer. */
 "Name already exists." = "Naziv već postoji.";
+
+/* No comment provided by engineer. */
+"natural logarithm" = "natural logarithm";
 
 /* No comment provided by engineer. */
 "New" = "Novi";
@@ -1112,9 +1199,6 @@
 "not available. Continue anyway?" = "not available. Continue anyway?";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this project. Please delete some of your projects" = "Not enough free memory to download this project. Please delete some of your projects";
-
-/* No comment provided by engineer. */
 "Not enough Memory" = "Nema dovoljno memorije";
 
 /* No comment provided by engineer. */
@@ -1139,13 +1223,7 @@
 "Object" = "Objekat";
 
 /* No comment provided by engineer. */
-"Object lists:" = "Liste objekata:";
-
-/* No comment provided by engineer. */
 "Object or actor name" = "Object or actor name";
-
-/* No comment provided by engineer. */
-"Object variables:" = "Object variables:";
 
 /* No comment provided by engineer. */
 "Oct" = "Okt";
@@ -1218,6 +1296,9 @@
 
 /* No comment provided by engineer. */
 "phiro side right" = "phiro side right";
+
+/* No comment provided by engineer. */
+"pi" = "pi";
 
 /* No comment provided by engineer. */
 "Piano" = "Piano";
@@ -1304,6 +1385,9 @@
 "position y" = "pozicija y";
 
 /* No comment provided by engineer. */
+"power" = "snaga";
+
+/* No comment provided by engineer. */
 "Preview" = "Pregled";
 
 /* No comment provided by engineer. */
@@ -1319,16 +1403,10 @@
 "Project" = "Projekat";
 
 /* No comment provided by engineer. */
-"Project lists:" = "Project lists:";
-
-/* No comment provided by engineer. */
 "Project name" = "Naziv projekta";
 
 /* No comment provided by engineer. */
 "Project Name is necessary!" = "Project Name is necessary!";
-
-/* No comment provided by engineer. */
-"Project variables:" = "Project variables:";
 
 /* No comment provided by engineer. */
 "Projects" = "Programi";
@@ -1337,7 +1415,13 @@
 "Projects on device" = "Programi";
 
 /* No comment provided by engineer. */
+"Properties" = "Objekat";
+
+/* No comment provided by engineer. */
 "random position" = "slučajna pozicija";
+
+/* No comment provided by engineer. */
+"random value from to" = "slučajna vrijednost od";
 
 /* No comment provided by engineer. */
 "Rate Us" = "Rate Us";
@@ -1351,17 +1435,20 @@
 /* paint */
 "Rectangle / Square" = "Rectangle / Square";
 
-/* No comment provided by engineer. */
-"red" = "crvena";
-
 /* paint */
 "Red" = "Crvena";
+
+/* No comment provided by engineer. */
+"red" = "crvena";
 
 /* No comment provided by engineer. */
 "Register" = "Register";
 
 /* No comment provided by engineer. */
 "Registration successful" = "Registration successful";
+
+/* No comment provided by engineer. */
+"regular expression" = "regularni izraz";
 
 /* No comment provided by engineer. */
 "Remove known devices" = "Remove known devices";
@@ -1417,11 +1504,11 @@
 /* No comment provided by engineer. */
 "Saturday" = "Subota";
 
+/* No comment provided by engineer. */
+"Save changes" = "Save changes";
+
 /* paint */
 "Save to Photos" = "Save to Photos";
-
-/* No comment provided by engineer. */
-"Save to PocketCode" = "Sačuvajte u PocketCode";
 
 /* No comment provided by engineer. */
 "Saved" = "Sačuvano";
@@ -1535,6 +1622,9 @@
 "Set size to" = "Postavi veličinu na";
 
 /* No comment provided by engineer. */
+"Set tempo to" = "Set tempo to";
+
+/* No comment provided by engineer. */
 "Set transparency " = "Postavite transparentnost ";
 
 /* No comment provided by engineer. */
@@ -1560,6 +1650,9 @@
 
 /* No comment provided by engineer. */
 "Show variable" = "Prikažite varijablu";
+
+/* No comment provided by engineer. */
+"sine" = "sine";
 
 /* No comment provided by engineer. */
 "size" = "veličina";
@@ -1591,11 +1684,11 @@
 /* No comment provided by engineer. */
 "Speed" = "Brzina";
 
-/* No comment provided by engineer. */
-"sqrt" = "sqrt";
-
 /* paint */
 "square" = "square";
+
+/* No comment provided by engineer. */
+"square root" = "kvadratni korijen";
 
 /* No comment provided by engineer. */
 "stage is touched" = "pozornica je pritisnuta";
@@ -1628,6 +1721,9 @@
 "steps" = "koraci";
 
 /* No comment provided by engineer. */
+"Stitch" = "Stitch";
+
+/* No comment provided by engineer. */
 "Stop all sounds" = "Zaustavi sve zvukove";
 
 /* No comment provided by engineer. */
@@ -1643,6 +1739,9 @@
 "Switch to look" = "Prebaci na izgled";
 
 /* No comment provided by engineer. */
+"Switch to look with number" = "Pređite na poziciju broj";
+
+/* No comment provided by engineer. */
 "Syntax Error!" = "Greška u sintaksi!";
 
 /* No comment provided by engineer. */
@@ -1650,6 +1749,9 @@
 
 /* No comment provided by engineer. */
 "Synth Pad" = "Synth Pad";
+
+/* No comment provided by engineer. */
+"tangent" = "tangent";
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add actors or objects" = "Pritisnite \"+\" da dodate učesnike ili objekte";
@@ -1665,6 +1767,9 @@
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add sounds" = "Pritisnite \"+\" za dodavanje zvuka";
+
+/* No comment provided by engineer. */
+"Tap \"+\" to add variables and lists" = "Tap \"+\" to add variables and lists";
 
 /* Button title at the settings screen to get to the terms of use and service. */
 "Terms of Use and Service" = "Uslovi korištenja ";
@@ -1698,9 +1803,6 @@
 
 /* No comment provided by engineer. */
 "The recent projects cannot be loaded" = "The recent projects cannot be loaded";
-
-/* No comment provided by engineer. */
-"The requested project can not be found. Please choose a different one." = "The requested project can not be found. Please choose a different one.";
 
 /* No comment provided by engineer. */
 "The requested project can not be loaded. Please try again later." = "The requested project can not be loaded. Please try again later.";
@@ -1757,6 +1859,9 @@
 "Today" = "Danas";
 
 /* No comment provided by engineer. */
+"Touch detection" = "Touch detection";
+
+/* No comment provided by engineer. */
 "touch position" = "dodirnite poziciju";
 
 /* No comment provided by engineer. */
@@ -1785,6 +1890,9 @@
 
 /* No comment provided by engineer. */
 "Turn right" = "Skreni desno";
+
+/* No comment provided by engineer. */
+"Unable to import project!" = "Unable to import project!";
 
 /* No comment provided by engineer. */
 "Unable to load project!" = "Unable to load project!";
@@ -1856,9 +1964,6 @@
 "Username must not be blank" = "Korisničko ime ne smije biti prazno";
 
 /* No comment provided by engineer. */
-"Var/List" = "Var/List";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Variable name:";
 
 /* No comment provided by engineer. */
@@ -1869,6 +1974,12 @@
 
 /* No comment provided by engineer. */
 "Variables" = "Varijable";
+
+/* No comment provided by engineer. */
+"Variables for all actors and objects" = "Varijable za sve učesnike i objekte";
+
+/* No comment provided by engineer. */
+"Variables for this actor or object only" = "Varijable samo za ovog učesnika ili ovaj objekat";
 
 /* No comment provided by engineer. */
 "Version" = "Verzija";
@@ -1887,6 +1998,9 @@
 
 /* No comment provided by engineer. */
 "Views" = "pregleda";
+
+/* No comment provided by engineer. */
+"Visual sensors" = "Visual sensors";
 
 /* No comment provided by engineer. */
 "Wait" = "Čekaj";
@@ -1962,6 +2076,9 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
+
+/* No comment provided by engineer. */
+"Your report was successfully sent!" = "Your report was successfully sent!";
 
 /* paint */
 "Zoom" = "Zoom";
