--- a/src/Catty/Resources/Localization/cs.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/cs.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "About Pocket Code" = "O Pocket Code";
 
 /* No comment provided by engineer. */
+"absolute value" = "absolute value";
+
+/* No comment provided by engineer. */
 "acceleration x" = "zrychlení_x";
 
 /* No comment provided by engineer. */
@@ -101,6 +104,15 @@
 "April" = "Duben";
 
 /* No comment provided by engineer. */
+"arccosine" = "arccosine";
+
+/* No comment provided by engineer. */
+"arcsine" = "arcsine";
+
+/* No comment provided by engineer. */
+"arctangent" = "arctangent";
+
+/* No comment provided by engineer. */
 "Arduino" = "Arduino";
 
 /* No comment provided by engineer. */
@@ -169,11 +181,11 @@
 /* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
-/* paint */
-"Blue" = "Modrá";
-
 /* No comment provided by engineer. */
 "blue" = "blue";
+
+/* paint */
+"Blue" = "Modrá";
 
 /* No comment provided by engineer. */
 "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings." = "Bluetooth není k dispozici. Vaše zařízení nepodporují Bluetooth 4.0 nebo je Bluetooth čip poškozen. Zkontrolujte připojení k jinému zařízení Bluetooth v nastavení.";
@@ -230,7 +242,7 @@
 "Catrobat community" = "Catrobat community";
 
 /* No comment provided by engineer. */
-"ceil" = "ceil";
+"ceiling" = "ceil";
 
 /* No comment provided by engineer. */
 "Cello" = "Cello";
@@ -299,6 +311,9 @@
 "color" = "color";
 
 /* No comment provided by engineer. */
+"Comparison operators" = "Comparison operators";
+
+/* No comment provided by engineer. */
 "compass" = "kompas";
 
 /* No comment provided by engineer. */
@@ -341,6 +356,9 @@
 "Copy" = "Kopírovat";
 
 /* No comment provided by engineer. */
+"Copy actors or objects" = "Copy actors or objects";
+
+/* No comment provided by engineer. */
 "Copy brick" = "Copy brick";
 
 /* No comment provided by engineer. */
@@ -350,10 +368,19 @@
 "Copy project" = "Copy project";
 
 /* No comment provided by engineer. */
+"cosine" = "cosine";
+
+/* No comment provided by engineer. */
 "Create account" = "Vytvořit účet";
 
 /* No comment provided by engineer. */
+"Create patterns for stiching machines" = "Create patterns for stiching machines";
+
+/* No comment provided by engineer. */
 "Data" = "Data";
+
+/* No comment provided by engineer. */
+"Date and time" = "Datum a čas";
 
 /* No comment provided by engineer. */
 "day" = "den";
@@ -366,6 +393,9 @@
 
 /* No comment provided by engineer. */
 "December" = "Prosinec";
+
+/* No comment provided by engineer. */
+"decimal logarithm" = "decimal logarithm";
 
 /* No comment provided by engineer. */
 "degrees" = "stupně";
@@ -461,6 +491,9 @@
 "device motion-sensor" = "device motion-sensor";
 
 /* No comment provided by engineer. */
+"Device sensors" = "Senzory zařízení";
+
+/* No comment provided by engineer. */
 "direction" = "směr";
 
 /* No comment provided by engineer. */
@@ -479,6 +512,9 @@
 "Disagree" = "Nesouhlasím";
 
 /* No comment provided by engineer. */
+"Discard changes" = "Discard changes";
+
+/* No comment provided by engineer. */
 "Disconnect all devices" = "Odpojte všechna zařízení";
 
 /* No comment provided by engineer. */
@@ -488,7 +524,7 @@
 "Do you really want to delete the current drawing?" = "Opravdu chcete odstranit aktuální výkres?";
 
 /* paint */
-"Do you want to save the changes" = "Chcete uložit změny";
+"Do you want to save your changes?" = "Chcete uložit provedené změny?";
 
 /* No comment provided by engineer. */
 "don't rotate" = "Neotáčet";
@@ -498,9 +534,6 @@
 
 /* No comment provided by engineer. */
 "Download" = "Stáhnout";
-
-/* No comment provided by engineer. */
-"Download successful" = "Staženo úspěšně";
 
 /* No comment provided by engineer. */
 "Downloads" = "Stahování";
@@ -569,6 +602,12 @@
 "Email" = "E-mail";
 
 /* No comment provided by engineer. */
+"Embroidery" = "Embroidery";
+
+/* No comment provided by engineer. */
+"Embroidery extension" = "Embroidery extension";
+
+/* No comment provided by engineer. */
 "Empty input!" = "Empty input!";
 
 /* No comment provided by engineer. */
@@ -623,10 +662,16 @@
 "Error" = "Chyba";
 
 /* No comment provided by engineer. */
+"Error occurred while reporting the project. Please try again later." = "Error occurred while reporting the project. Please try again later.";
+
+/* No comment provided by engineer. */
 "Error saving file" = "Error saving file";
 
 /* No comment provided by engineer. */
 "Event" = "Událost";
+
+/* No comment provided by engineer. */
+"exponent" = "exponent";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -704,6 +749,9 @@
 "Forgot password" = "Zapomenuté heslo";
 
 /* No comment provided by engineer. */
+"Formula Editor" = "Formula Editor";
+
+/* No comment provided by engineer. */
 "Formula too long!" = "Vzorec je příliš dlouhý!";
 
 /* No comment provided by engineer. */
@@ -725,6 +773,12 @@
 "Front camera" = "Přední fotoaparát";
 
 /* No comment provided by engineer. */
+"Functions" = "Funkce";
+
+/* No comment provided by engineer. */
+"General properties" = "General properties";
+
+/* No comment provided by engineer. */
 "Glide" = "Hýbat";
 
 /* No comment provided by engineer. */
@@ -736,11 +790,11 @@
 /* No comment provided by engineer. */
 "Go to front" = "Přejít do popředí";
 
-/* paint */
-"Green" = "Zelená";
-
 /* No comment provided by engineer. */
 "green" = "green";
+
+/* paint */
+"Green" = "Zelená";
 
 /* No comment provided by engineer. */
 "Guitar" = "Guitar";
@@ -827,6 +881,9 @@
 "italic" = "kurzíva";
 
 /* No comment provided by engineer. */
+"item" = "prvek";
+
+/* No comment provided by engineer. */
 "Jan" = "Led";
 
 /* No comment provided by engineer. */
@@ -878,10 +935,10 @@
 "left-right only" = "zleva doprava";
 
 /* No comment provided by engineer. */
-"Length" = "Délka";
+"length" = "délka";
 
 /* No comment provided by engineer. */
-"length" = "délka";
+"Length" = "Délka";
 
 /* No comment provided by engineer. */
 "letter" = "dopis";
@@ -899,6 +956,12 @@
 "Lists" = "Seznamy";
 
 /* No comment provided by engineer. */
+"Lists for all actors and objects" = "Seznamy pro všechny objekty";
+
+/* No comment provided by engineer. */
+"Lists for this actor or object only" = "Seznamy pouze pro tento objekt";
+
+/* No comment provided by engineer. */
 "Loading" = "Načítání";
 
 /* No comment provided by engineer. */
@@ -909,6 +972,9 @@
 
 /* No comment provided by engineer. */
 "Logic" = "Logika";
+
+/* No comment provided by engineer. */
+"Logical (Boolean) operators and constants" = "Logical (Boolean) operators and constants";
 
 /* No comment provided by engineer. */
 "Login" = "Přihlásit se";
@@ -922,11 +988,11 @@
 /* No comment provided by engineer. */
 "longitude" = "Zeměpisná délka";
 
-/* No comment provided by engineer. */
-"Look" = "Vzhled";
-
 /* LOOK */
 "look" = "vzhled";
+
+/* No comment provided by engineer. */
+"Look" = "Vzhled";
 
 /* No comment provided by engineer. */
 "look name" = "název_vzhledu";
@@ -953,7 +1019,13 @@
 "Marimba" = "Marimba";
 
 /* No comment provided by engineer. */
-"Math" = "Matika\n";
+"Maths" = "Matematika";
+
+/* No comment provided by engineer. */
+"Maximize" = "Maximize";
+
+/* No comment provided by engineer. */
+"maximum of" = "max";
 
 /* No comment provided by engineer. */
 "May" = "Kvě";
@@ -977,6 +1049,12 @@
 "MI" = "MI";
 
 /* No comment provided by engineer. */
+"Minimize" = "Minimize";
+
+/* No comment provided by engineer. */
+"minimum of" = "min";
+
+/* No comment provided by engineer. */
 "minute" = "minuta";
 
 /* paint */
@@ -984,6 +1062,9 @@
 
 /* No comment provided by engineer. */
 "Mo" = "Mo";
+
+/* No comment provided by engineer. */
+"modulo" = "modulo";
 
 /* Prefix of default catrobat project object names (except background object) */
 "Mole" = "Krtek";
@@ -1008,6 +1089,9 @@
 
 /* No comment provided by engineer. */
 "Motion" = "Pohyb";
+
+/* No comment provided by engineer. */
+"Motion properties" = "Pohybové vlastnosti";
 
 /* No comment provided by engineer. */
 "Move" = "Přesunout";
@@ -1047,6 +1131,9 @@
 
 /* No comment provided by engineer. */
 "Name already exists." = "Name already exists.";
+
+/* No comment provided by engineer. */
+"natural logarithm" = "natural logarithm";
 
 /* No comment provided by engineer. */
 "New" = "Nový";
@@ -1112,9 +1199,6 @@
 "not available. Continue anyway?" = "není k dispozici. Chcete přesto pokračovat?";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this project. Please delete some of your projects" = "Not enough free memory to download this project. Please delete some of your projects";
-
-/* No comment provided by engineer. */
 "Not enough Memory" = "Není dostatek paměti";
 
 /* No comment provided by engineer. */
@@ -1139,13 +1223,7 @@
 "Object" = "Objekt";
 
 /* No comment provided by engineer. */
-"Object lists:" = "Object lists:";
-
-/* No comment provided by engineer. */
 "Object or actor name" = "Object or actor name";
-
-/* No comment provided by engineer. */
-"Object variables:" = "Objektové proměnné:";
 
 /* No comment provided by engineer. */
 "Oct" = "Oct";
@@ -1218,6 +1296,9 @@
 
 /* No comment provided by engineer. */
 "phiro side right" = "phiro side right";
+
+/* No comment provided by engineer. */
+"pi" = "pi";
 
 /* No comment provided by engineer. */
 "Piano" = "Piano";
@@ -1304,6 +1385,9 @@
 "position y" = "pozice_y";
 
 /* No comment provided by engineer. */
+"power" = "síla";
+
+/* No comment provided by engineer. */
 "Preview" = "Náhled";
 
 /* No comment provided by engineer. */
@@ -1319,16 +1403,10 @@
 "Project" = "Projekt";
 
 /* No comment provided by engineer. */
-"Project lists:" = "Project lists:";
-
-/* No comment provided by engineer. */
 "Project name" = "Název programu";
 
 /* No comment provided by engineer. */
 "Project Name is necessary!" = "Project Name is necessary!";
-
-/* No comment provided by engineer. */
-"Project variables:" = "Project variables:";
 
 /* No comment provided by engineer. */
 "Projects" = "Programy";
@@ -1337,7 +1415,13 @@
 "Projects on device" = "Programy";
 
 /* No comment provided by engineer. */
+"Properties" = "Objekt";
+
+/* No comment provided by engineer. */
 "random position" = "Náhodná pozice";
+
+/* No comment provided by engineer. */
+"random value from to" = "random value from to";
 
 /* No comment provided by engineer. */
 "Rate Us" = "Ohodnoťte nás";
@@ -1351,17 +1435,20 @@
 /* paint */
 "Rectangle / Square" = "Obdélník / čtverec";
 
-/* No comment provided by engineer. */
-"red" = "red";
-
 /* paint */
 "Red" = "Červená";
+
+/* No comment provided by engineer. */
+"red" = "red";
 
 /* No comment provided by engineer. */
 "Register" = "Registrovat";
 
 /* No comment provided by engineer. */
 "Registration successful" = "Registrace proběhla úspěšně";
+
+/* No comment provided by engineer. */
+"regular expression" = "regular expression";
 
 /* No comment provided by engineer. */
 "Remove known devices" = "Odstranit známé zařízení";
@@ -1417,11 +1504,11 @@
 /* No comment provided by engineer. */
 "Saturday" = "Sobota";
 
+/* No comment provided by engineer. */
+"Save changes" = "Save changes";
+
 /* paint */
 "Save to Photos" = "Save to Photos";
-
-/* No comment provided by engineer. */
-"Save to PocketCode" = "Uložit do PocketCode";
 
 /* No comment provided by engineer. */
 "Saved" = "Uloženo";
@@ -1535,6 +1622,9 @@
 "Set size to" = "Nastavit velikost na";
 
 /* No comment provided by engineer. */
+"Set tempo to" = "Set tempo to";
+
+/* No comment provided by engineer. */
 "Set transparency " = "Nastavit průhlednost ";
 
 /* No comment provided by engineer. */
@@ -1560,6 +1650,9 @@
 
 /* No comment provided by engineer. */
 "Show variable" = "Zobrazit proměnnou";
+
+/* No comment provided by engineer. */
+"sine" = "sine";
 
 /* No comment provided by engineer. */
 "size" = "Velikost";
@@ -1591,11 +1684,11 @@
 /* No comment provided by engineer. */
 "Speed" = "Rychlost";
 
-/* No comment provided by engineer. */
-"sqrt" = "sqrt";
-
 /* paint */
 "square" = "Čtverec";
+
+/* No comment provided by engineer. */
+"square root" = "druhá odmocnina";
 
 /* No comment provided by engineer. */
 "stage is touched" = "obrazovka _ je _ dotknuta";
@@ -1628,6 +1721,9 @@
 "steps" = "kroků";
 
 /* No comment provided by engineer. */
+"Stitch" = "Stitch";
+
+/* No comment provided by engineer. */
 "Stop all sounds" = "Zastavit všechny zvuky";
 
 /* No comment provided by engineer. */
@@ -1643,6 +1739,9 @@
 "Switch to look" = "Změnit na vzhled";
 
 /* No comment provided by engineer. */
+"Switch to look with number" = "Switch to look with number";
+
+/* No comment provided by engineer. */
 "Syntax Error!" = "Syntaktická chyba!";
 
 /* No comment provided by engineer. */
@@ -1650,6 +1749,9 @@
 
 /* No comment provided by engineer. */
 "Synth Pad" = "Synth Pad";
+
+/* No comment provided by engineer. */
+"tangent" = "tangent";
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add actors or objects" = "Klepni na \"+\" pro přidání objektů";
@@ -1665,6 +1767,9 @@
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add sounds" = "Klepni na \"+\" pro přidání zvuků";
+
+/* No comment provided by engineer. */
+"Tap \"+\" to add variables and lists" = "Tap \"+\" to add variables and lists";
 
 /* Button title at the settings screen to get to the terms of use and service. */
 "Terms of Use and Service" = "Podmínky užití a služeb";
@@ -1698,9 +1803,6 @@
 
 /* No comment provided by engineer. */
 "The recent projects cannot be loaded" = "The recent projects cannot be loaded";
-
-/* No comment provided by engineer. */
-"The requested project can not be found. Please choose a different one." = "The requested project can not be found. Please choose a different one.";
 
 /* No comment provided by engineer. */
 "The requested project can not be loaded. Please try again later." = "The requested project can not be loaded. Please try again later.";
@@ -1757,6 +1859,9 @@
 "Today" = "Dnes";
 
 /* No comment provided by engineer. */
+"Touch detection" = "Detekce doteku";
+
+/* No comment provided by engineer. */
 "touch position" = "Pozice dotyku";
 
 /* No comment provided by engineer. */
@@ -1785,6 +1890,9 @@
 
 /* No comment provided by engineer. */
 "Turn right" = "Zatočit vpravo";
+
+/* No comment provided by engineer. */
+"Unable to import project!" = "Unable to import project!";
 
 /* No comment provided by engineer. */
 "Unable to load project!" = "Unable to load project!";
@@ -1856,9 +1964,6 @@
 "Username must not be blank" = "Username must not be blank";
 
 /* No comment provided by engineer. */
-"Var/List" = "Var/List";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Název proměnné:";
 
 /* No comment provided by engineer. */
@@ -1869,6 +1974,12 @@
 
 /* No comment provided by engineer. */
 "Variables" = "Proměnné";
+
+/* No comment provided by engineer. */
+"Variables for all actors and objects" = "Proměnné pro všechny objekty";
+
+/* No comment provided by engineer. */
+"Variables for this actor or object only" = "Proměnné pouze pro tento objekt";
 
 /* No comment provided by engineer. */
 "Version" = "Verze";
@@ -1887,6 +1998,9 @@
 
 /* No comment provided by engineer. */
 "Views" = "Názory";
+
+/* No comment provided by engineer. */
+"Visual sensors" = "Visual sensors";
 
 /* No comment provided by engineer. */
 "Wait" = "Čekat";
@@ -1962,6 +2076,9 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
+
+/* No comment provided by engineer. */
+"Your report was successfully sent!" = "Your report was successfully sent!";
 
 /* paint */
 "Zoom" = "Zoom";
