--- a/src/Catty/Resources/Localization/fa.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/fa.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "About Pocket Code" = "درباره پاکت کد";
 
 /* No comment provided by engineer. */
+"absolute value" = "absolute value";
+
+/* No comment provided by engineer. */
 "acceleration x" = "شتاب x";
 
 /* No comment provided by engineer. */
@@ -101,6 +104,15 @@
 "April" = "آوریل";
 
 /* No comment provided by engineer. */
+"arccosine" = "arccosine";
+
+/* No comment provided by engineer. */
+"arcsine" = "arcsine";
+
+/* No comment provided by engineer. */
+"arctangent" = "arctangent";
+
+/* No comment provided by engineer. */
 "Arduino" = "\"آردوینو\"";
 
 /* No comment provided by engineer. */
@@ -169,11 +181,11 @@
 /* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
-/* paint */
-"Blue" = "آبی";
-
 /* No comment provided by engineer. */
 "blue" = "blue";
+
+/* paint */
+"Blue" = "آبی";
 
 /* No comment provided by engineer. */
 "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings." = "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings.";
@@ -230,7 +242,7 @@
 "Catrobat community" = "Catrobat community";
 
 /* No comment provided by engineer. */
-"ceil" = "گرد کردن عدد رو به بالا";
+"ceiling" = "ceiling";
 
 /* No comment provided by engineer. */
 "Cello" = "Cello";
@@ -299,6 +311,9 @@
 "color" = "color";
 
 /* No comment provided by engineer. */
+"Comparison operators" = "Comparison operators";
+
+/* No comment provided by engineer. */
 "compass" = "قطب نما";
 
 /* No comment provided by engineer. */
@@ -341,6 +356,9 @@
 "Copy" = "کپی کردن";
 
 /* No comment provided by engineer. */
+"Copy actors or objects" = "Copy actors or objects";
+
+/* No comment provided by engineer. */
 "Copy brick" = "Copy brick";
 
 /* No comment provided by engineer. */
@@ -350,10 +368,19 @@
 "Copy project" = "Copy project";
 
 /* No comment provided by engineer. */
+"cosine" = "cosine";
+
+/* No comment provided by engineer. */
 "Create account" = "Create account";
 
 /* No comment provided by engineer. */
+"Create patterns for stiching machines" = "Create patterns for stiching machines";
+
+/* No comment provided by engineer. */
 "Data" = "داده‌";
+
+/* No comment provided by engineer. */
+"Date and time" = "Date and time";
 
 /* No comment provided by engineer. */
 "day" = "day";
@@ -366,6 +393,9 @@
 
 /* No comment provided by engineer. */
 "December" = "دسامبر";
+
+/* No comment provided by engineer. */
+"decimal logarithm" = "decimal logarithm";
 
 /* No comment provided by engineer. */
 "degrees" = "درجات";
@@ -461,6 +491,9 @@
 "device motion-sensor" = "device motion-sensor";
 
 /* No comment provided by engineer. */
+"Device sensors" = "Device sensors";
+
+/* No comment provided by engineer. */
 "direction" = "جهت";
 
 /* No comment provided by engineer. */
@@ -479,6 +512,9 @@
 "Disagree" = "Disagree";
 
 /* No comment provided by engineer. */
+"Discard changes" = "Discard changes";
+
+/* No comment provided by engineer. */
 "Disconnect all devices" = "Disconnect all devices";
 
 /* No comment provided by engineer. */
@@ -488,7 +524,7 @@
 "Do you really want to delete the current drawing?" = "آیا واقعا می خواهی نقاشی فعلی را حذف کنی؟";
 
 /* paint */
-"Do you want to save the changes" = "آیا می خواهی تغییرات  انجام شده را ذخیره کنی";
+"Do you want to save your changes?" = "آیا مایلی تغییرات را ذخیره کنی؟";
 
 /* No comment provided by engineer. */
 "don't rotate" = "don't rotate";
@@ -498,9 +534,6 @@
 
 /* No comment provided by engineer. */
 "Download" = "دانلود";
-
-/* No comment provided by engineer. */
-"Download successful" = "بارگيري با موفقیت انجام شد";
 
 /* No comment provided by engineer. */
 "Downloads" = "دانلود ها";
@@ -569,6 +602,12 @@
 "Email" = "رایانامه";
 
 /* No comment provided by engineer. */
+"Embroidery" = "Embroidery";
+
+/* No comment provided by engineer. */
+"Embroidery extension" = "Embroidery extension";
+
+/* No comment provided by engineer. */
 "Empty input!" = "Empty input!";
 
 /* No comment provided by engineer. */
@@ -623,10 +662,16 @@
 "Error" = "خطا";
 
 /* No comment provided by engineer. */
+"Error occurred while reporting the project. Please try again later." = "Error occurred while reporting the project. Please try again later.";
+
+/* No comment provided by engineer. */
 "Error saving file" = "Error saving file";
 
 /* No comment provided by engineer. */
 "Event" = "رویداد";
+
+/* No comment provided by engineer. */
+"exponent" = "exponent";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -704,6 +749,9 @@
 "Forgot password" = "رمزعبور را فراموش کردی";
 
 /* No comment provided by engineer. */
+"Formula Editor" = "Formula Editor";
+
+/* No comment provided by engineer. */
 "Formula too long!" = "فرمول بسیار طولانی است!";
 
 /* No comment provided by engineer. */
@@ -725,6 +773,12 @@
 "Front camera" = "Front camera";
 
 /* No comment provided by engineer. */
+"Functions" = "Functions";
+
+/* No comment provided by engineer. */
+"General properties" = "General properties";
+
+/* No comment provided by engineer. */
 "Glide" = "سر بخور";
 
 /* No comment provided by engineer. */
@@ -736,11 +790,11 @@
 /* No comment provided by engineer. */
 "Go to front" = "برو به جلو";
 
-/* paint */
-"Green" = "سبز";
-
 /* No comment provided by engineer. */
 "green" = "green";
+
+/* paint */
+"Green" = "سبز";
 
 /* No comment provided by engineer. */
 "Guitar" = "Guitar";
@@ -827,6 +881,9 @@
 "italic" = "italic";
 
 /* No comment provided by engineer. */
+"item" = "عنصر";
+
+/* No comment provided by engineer. */
 "Jan" = "ژانویه";
 
 /* No comment provided by engineer. */
@@ -878,10 +935,10 @@
 "left-right only" = "left-right only";
 
 /* No comment provided by engineer. */
-"Length" = "طول";
+"length" = "طول";
 
 /* No comment provided by engineer. */
-"length" = "طول";
+"Length" = "طول";
 
 /* No comment provided by engineer. */
 "letter" = "نامه";
@@ -899,6 +956,12 @@
 "Lists" = "لیست ها";
 
 /* No comment provided by engineer. */
+"Lists for all actors and objects" = "Lists for all actors and objects";
+
+/* No comment provided by engineer. */
+"Lists for this actor or object only" = "Lists for this actor or object only";
+
+/* No comment provided by engineer. */
 "Loading" = "در حال بارگذاری";
 
 /* No comment provided by engineer. */
@@ -909,6 +972,9 @@
 
 /* No comment provided by engineer. */
 "Logic" = "منطق";
+
+/* No comment provided by engineer. */
+"Logical (Boolean) operators and constants" = "Logical (Boolean) operators and constants";
 
 /* No comment provided by engineer. */
 "Login" = "ورود به سیستم";
@@ -922,11 +988,11 @@
 /* No comment provided by engineer. */
 "longitude" = "longitude";
 
-/* No comment provided by engineer. */
-"Look" = "شکل";
-
 /* LOOK */
 "look" = "شکل";
+
+/* No comment provided by engineer. */
+"Look" = "شکل";
 
 /* No comment provided by engineer. */
 "look name" = "look name";
@@ -953,7 +1019,13 @@
 "Marimba" = "Marimba";
 
 /* No comment provided by engineer. */
-"Math" = "ریاضی";
+"Maths" = "Maths";
+
+/* No comment provided by engineer. */
+"Maximize" = "Maximize";
+
+/* No comment provided by engineer. */
+"maximum of" = "بیشینه";
 
 /* No comment provided by engineer. */
 "May" = "مِی";
@@ -977,6 +1049,12 @@
 "MI" = "MI";
 
 /* No comment provided by engineer. */
+"Minimize" = "Minimize";
+
+/* No comment provided by engineer. */
+"minimum of" = "کمینه";
+
+/* No comment provided by engineer. */
 "minute" = "minute";
 
 /* paint */
@@ -984,6 +1062,9 @@
 
 /* No comment provided by engineer. */
 "Mo" = "دوشنبه";
+
+/* No comment provided by engineer. */
+"modulo" = "modulo";
 
 /* Prefix of default catrobat project object names (except background object) */
 "Mole" = "موش کور";
@@ -1008,6 +1089,9 @@
 
 /* No comment provided by engineer. */
 "Motion" = "حرکت";
+
+/* No comment provided by engineer. */
+"Motion properties" = "Motion properties";
 
 /* No comment provided by engineer. */
 "Move" = "حرکت بده";
@@ -1047,6 +1131,9 @@
 
 /* No comment provided by engineer. */
 "Name already exists." = "Name already exists.";
+
+/* No comment provided by engineer. */
+"natural logarithm" = "natural logarithm";
 
 /* No comment provided by engineer. */
 "New" = "جدید";
@@ -1112,9 +1199,6 @@
 "not available. Continue anyway?" = "not available. Continue anyway?";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this project. Please delete some of your projects" = "Not enough free memory to download this project. Please delete some of your projects";
-
-/* No comment provided by engineer. */
 "Not enough Memory" = "حافظه کافی نیست";
 
 /* No comment provided by engineer. */
@@ -1139,13 +1223,7 @@
 "Object" = "شی";
 
 /* No comment provided by engineer. */
-"Object lists:" = "Object lists:";
-
-/* No comment provided by engineer. */
 "Object or actor name" = "Object or actor name";
-
-/* No comment provided by engineer. */
-"Object variables:" = "متغیرهای شی:";
 
 /* No comment provided by engineer. */
 "Oct" = "اکتبر";
@@ -1218,6 +1296,9 @@
 
 /* No comment provided by engineer. */
 "phiro side right" = "phiro side right";
+
+/* No comment provided by engineer. */
+"pi" = "pi";
 
 /* No comment provided by engineer. */
 "Piano" = "Piano";
@@ -1304,6 +1385,9 @@
 "position y" = "موقعیت y";
 
 /* No comment provided by engineer. */
+"power" = "power";
+
+/* No comment provided by engineer. */
 "Preview" = "Preview";
 
 /* No comment provided by engineer. */
@@ -1319,16 +1403,10 @@
 "Project" = "پروژه";
 
 /* No comment provided by engineer. */
-"Project lists:" = "Project lists:";
-
-/* No comment provided by engineer. */
 "Project name" = "Project name";
 
 /* No comment provided by engineer. */
 "Project Name is necessary!" = "Project Name is necessary!";
-
-/* No comment provided by engineer. */
-"Project variables:" = "Project variables:";
 
 /* No comment provided by engineer. */
 "Projects" = "برنامه ها";
@@ -1337,7 +1415,13 @@
 "Projects on device" = "برنامه ها";
 
 /* No comment provided by engineer. */
+"Properties" = "شی";
+
+/* No comment provided by engineer. */
 "random position" = "random position";
+
+/* No comment provided by engineer. */
+"random value from to" = "تصادفی";
 
 /* No comment provided by engineer. */
 "Rate Us" = "ما را ارزیابی کنید";
@@ -1351,17 +1435,20 @@
 /* paint */
 "Rectangle / Square" = "Rectangle / Square";
 
-/* No comment provided by engineer. */
-"red" = "red";
-
 /* paint */
 "Red" = "قرمز";
+
+/* No comment provided by engineer. */
+"red" = "red";
 
 /* No comment provided by engineer. */
 "Register" = "ثبت نام";
 
 /* No comment provided by engineer. */
 "Registration successful" = "ثبت نام موفقیت آمیز";
+
+/* No comment provided by engineer. */
+"regular expression" = "regular expression";
 
 /* No comment provided by engineer. */
 "Remove known devices" = "Remove known devices";
@@ -1417,11 +1504,11 @@
 /* No comment provided by engineer. */
 "Saturday" = "شنبه";
 
+/* No comment provided by engineer. */
+"Save changes" = "Save changes";
+
 /* paint */
 "Save to Photos" = "Save to Photos";
-
-/* No comment provided by engineer. */
-"Save to PocketCode" = "ذخیره در پاکت کد";
 
 /* No comment provided by engineer. */
 "Saved" = "ذخیره شد";
@@ -1535,6 +1622,9 @@
 "Set size to" = "تنظیم اندازه به";
 
 /* No comment provided by engineer. */
+"Set tempo to" = "Set tempo to";
+
+/* No comment provided by engineer. */
 "Set transparency " = "تنظیم شفافیت ";
 
 /* No comment provided by engineer. */
@@ -1560,6 +1650,9 @@
 
 /* No comment provided by engineer. */
 "Show variable" = "نشان دادن متغیر";
+
+/* No comment provided by engineer. */
+"sine" = "sine";
 
 /* No comment provided by engineer. */
 "size" = "اندازه";
@@ -1591,11 +1684,11 @@
 /* No comment provided by engineer. */
 "Speed" = "سرعت";
 
-/* No comment provided by engineer. */
-"sqrt" = "جذر";
-
 /* paint */
 "square" = "مربع";
+
+/* No comment provided by engineer. */
+"square root" = "جذر";
 
 /* No comment provided by engineer. */
 "stage is touched" = "stage is touched";
@@ -1628,6 +1721,9 @@
 "steps" = "مرحله";
 
 /* No comment provided by engineer. */
+"Stitch" = "Stitch";
+
+/* No comment provided by engineer. */
 "Stop all sounds" = "توقف همه صداها";
 
 /* No comment provided by engineer. */
@@ -1643,6 +1739,9 @@
 "Switch to look" = "تغییر شکل بده";
 
 /* No comment provided by engineer. */
+"Switch to look with number" = "Switch to look with number";
+
+/* No comment provided by engineer. */
 "Syntax Error!" = "خطای ساختاری!";
 
 /* No comment provided by engineer. */
@@ -1650,6 +1749,9 @@
 
 /* No comment provided by engineer. */
 "Synth Pad" = "Synth Pad";
+
+/* No comment provided by engineer. */
+"tangent" = "tangent";
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add actors or objects" = "Tap \"+\" to add actors or objects";
@@ -1665,6 +1767,9 @@
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add sounds" = "برای اضافه کردن صدا روی \"+\" ضربه بزن";
+
+/* No comment provided by engineer. */
+"Tap \"+\" to add variables and lists" = "Tap \"+\" to add variables and lists";
 
 /* Button title at the settings screen to get to the terms of use and service. */
 "Terms of Use and Service" = "Terms of Use and Service";
@@ -1698,9 +1803,6 @@
 
 /* No comment provided by engineer. */
 "The recent projects cannot be loaded" = "The recent projects cannot be loaded";
-
-/* No comment provided by engineer. */
-"The requested project can not be found. Please choose a different one." = "The requested project can not be found. Please choose a different one.";
 
 /* No comment provided by engineer. */
 "The requested project can not be loaded. Please try again later." = "The requested project can not be loaded. Please try again later.";
@@ -1757,6 +1859,9 @@
 "Today" = "امروز";
 
 /* No comment provided by engineer. */
+"Touch detection" = "Touch detection";
+
+/* No comment provided by engineer. */
 "touch position" = "touch position";
 
 /* No comment provided by engineer. */
@@ -1785,6 +1890,9 @@
 
 /* No comment provided by engineer. */
 "Turn right" = "بپیچ به راست";
+
+/* No comment provided by engineer. */
+"Unable to import project!" = "Unable to import project!";
 
 /* No comment provided by engineer. */
 "Unable to load project!" = "Unable to load project!";
@@ -1856,9 +1964,6 @@
 "Username must not be blank" = "نام کاربری نباید خالی باشد";
 
 /* No comment provided by engineer. */
-"Var/List" = "Var/List";
-
-/* No comment provided by engineer. */
 "Variable name:" = "نام متغیر:";
 
 /* No comment provided by engineer. */
@@ -1869,6 +1974,12 @@
 
 /* No comment provided by engineer. */
 "Variables" = "متغیرها";
+
+/* No comment provided by engineer. */
+"Variables for all actors and objects" = "Variables for all actors and objects";
+
+/* No comment provided by engineer. */
+"Variables for this actor or object only" = "Variables for this actor or object only";
 
 /* No comment provided by engineer. */
 "Version" = "نسخه";
@@ -1887,6 +1998,9 @@
 
 /* No comment provided by engineer. */
 "Views" = "بازدیدها";
+
+/* No comment provided by engineer. */
+"Visual sensors" = "Visual sensors";
 
 /* No comment provided by engineer. */
 "Wait" = "صبر کن";
@@ -1962,6 +2076,9 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
+
+/* No comment provided by engineer. */
+"Your report was successfully sent!" = "گزارشت با موفقیت ارسال شد!";
 
 /* paint */
 "Zoom" = "Zoom";
