--- a/src/Catty/Resources/Localization/pt-BR.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/pt-BR.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "About Pocket Code" = "Sobre o Pocket Code";
 
 /* No comment provided by engineer. */
+"absolute value" = "valor absoluto";
+
+/* No comment provided by engineer. */
 "acceleration x" = "aceleração x";
 
 /* No comment provided by engineer. */
@@ -50,10 +53,10 @@
 "Agree" = "Concordar";
 
 /* No comment provided by engineer. */
-"all around" = "todo mundo";
+"all around" = "todos em volta";
 
 /* No comment provided by engineer. */
-"All Bluetooth devices successfully disconnected" = "Todos os dispositivos Bluetooth foram desligados com sucesso";
+"All Bluetooth devices successfully disconnected" = "Todos os dispositivos Bluetooth foram desconectados com sucesso";
 
 /* No comment provided by engineer. */
 "All known Bluetooth devices successfully removed" = "Todos os dispositivos Bluetooth conhecidos foram removidos com sucesso";
@@ -99,6 +102,15 @@
 
 /* No comment provided by engineer. */
 "April" = "Abril";
+
+/* No comment provided by engineer. */
+"arccosine" = "arccosine";
+
+/* No comment provided by engineer. */
+"arcsine" = "arcsine";
+
+/* No comment provided by engineer. */
+"arctangent" = "arctangent";
 
 /* No comment provided by engineer. */
 "Arduino" = "Arduino";
@@ -164,16 +176,16 @@
 "Bassoon" = "Basbreve";
 
 /* No comment provided by engineer. */
-"becomes true" = "for verdadeiro";
+"becomes true" = "se tornar verdadeiro";
 
 /* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Antes de começar a codificar, leia e aceite nossa Política de Privacidade para usar o aplicativo:";
 
-/* paint */
-"Blue" = "Azul";
-
 /* No comment provided by engineer. */
 "blue" = "azul";
+
+/* paint */
+"Blue" = "Azul";
 
 /* No comment provided by engineer. */
 "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings." = "O Bluetooth não está disponível. Ou o seu dispositivo não suporta o Bluetooth 4.0, ou o seu circuito integrado de Bluetooth está danificado. Por favor verifique ligando a outro dispositivo Bluetooth nas Configurações.";
@@ -230,7 +242,7 @@
 "Catrobat community" = "Comunidade Catrobat";
 
 /* No comment provided by engineer. */
-"ceil" = "teto";
+"ceiling" = "Arredondar para cima";
 
 /* No comment provided by engineer. */
 "Cello" = "Cello";
@@ -299,6 +311,9 @@
 "color" = "cor";
 
 /* No comment provided by engineer. */
+"Comparison operators" = "Operadores de comparação";
+
+/* No comment provided by engineer. */
 "compass" = "bússola";
 
 /* No comment provided by engineer. */
@@ -341,6 +356,9 @@
 "Copy" = "Copiar";
 
 /* No comment provided by engineer. */
+"Copy actors or objects" = "Copiar atores ou objetos";
+
+/* No comment provided by engineer. */
 "Copy brick" = "Copiar bloco";
 
 /* No comment provided by engineer. */
@@ -350,10 +368,19 @@
 "Copy project" = "Copiar projeto";
 
 /* No comment provided by engineer. */
+"cosine" = "cosine";
+
+/* No comment provided by engineer. */
 "Create account" = "Criar conta";
 
 /* No comment provided by engineer. */
+"Create patterns for stiching machines" = "Criar padrões para máquinas de costurar";
+
+/* No comment provided by engineer. */
 "Data" = "Dados";
+
+/* No comment provided by engineer. */
+"Date and time" = "Data e hora";
 
 /* No comment provided by engineer. */
 "day" = "dia";
@@ -366,6 +393,9 @@
 
 /* No comment provided by engineer. */
 "December" = "Dezembro";
+
+/* No comment provided by engineer. */
+"decimal logarithm" = "Logaritmo decimal";
 
 /* No comment provided by engineer. */
 "degrees" = "graus";
@@ -461,6 +491,9 @@
 "device motion-sensor" = "sensor de movimento do dispositivo";
 
 /* No comment provided by engineer. */
+"Device sensors" = "Sensores do dispositivo";
+
+/* No comment provided by engineer. */
 "direction" = "direção";
 
 /* No comment provided by engineer. */
@@ -479,6 +512,9 @@
 "Disagree" = "Discordar";
 
 /* No comment provided by engineer. */
+"Discard changes" = "Descartar mudanças";
+
+/* No comment provided by engineer. */
 "Disconnect all devices" = "Desligar todos os dispositivos";
 
 /* No comment provided by engineer. */
@@ -488,19 +524,16 @@
 "Do you really want to delete the current drawing?" = "Você tem certeza que quer apagar o desenho atual?";
 
 /* paint */
-"Do you want to save the changes" = "Você quer salvar as alterações";
+"Do you want to save your changes?" = "Deseja salvar as alterações?";
 
 /* No comment provided by engineer. */
-"don't rotate" = "não rotacionar";
+"don't rotate" = "Não rotacionar";
 
 /* No comment provided by engineer. */
 "Done" = "Concluído";
 
 /* No comment provided by engineer. */
 "Download" = "Baixar";
-
-/* No comment provided by engineer. */
-"Download successful" = "Download bem-sucedido";
 
 /* No comment provided by engineer. */
 "Downloads" = "Downloads";
@@ -569,6 +602,12 @@
 "Email" = "E-Mail";
 
 /* No comment provided by engineer. */
+"Embroidery" = "Embroidery";
+
+/* No comment provided by engineer. */
+"Embroidery extension" = "Extensão Embroidery";
+
+/* No comment provided by engineer. */
 "Empty input!" = "Empty input!";
 
 /* No comment provided by engineer. */
@@ -623,10 +662,16 @@
 "Error" = "Erro";
 
 /* No comment provided by engineer. */
+"Error occurred while reporting the project. Please try again later." = "Ocorreu um erro ao reportar o projeto. Por favor, tente novamente mais tarde.";
+
+/* No comment provided by engineer. */
 "Error saving file" = "Erro ao salvar o arquivo";
 
 /* No comment provided by engineer. */
 "Event" = "Evento";
+
+/* No comment provided by engineer. */
+"exponent" = "expoente";
 
 /* No comment provided by engineer. */
 "FA" = "Fá";
@@ -689,7 +734,7 @@
 "Following features used in this project are not compatible with this version of Pocket Code:" = "Os seguintes recursos usados neste projeto não são compatíveis com esta versão do Pocket Code:";
 
 /* No comment provided by engineer. */
-"for" = "por";
+"for" = "para";
 
 /* No comment provided by engineer. */
 "for all actors or objects" = "para todos os atores ou objetos";
@@ -702,6 +747,9 @@
 
 /* No comment provided by engineer. */
 "Forgot password" = "Esqueci a senha";
+
+/* No comment provided by engineer. */
+"Formula Editor" = "Editor de fórmula";
 
 /* No comment provided by engineer. */
 "Formula too long!" = "Fórmula muito longa!";
@@ -725,6 +773,12 @@
 "Front camera" = "Câmara frontal";
 
 /* No comment provided by engineer. */
+"Functions" = "Funções";
+
+/* No comment provided by engineer. */
+"General properties" = "Propriedades gerais";
+
+/* No comment provided by engineer. */
 "Glide" = "Deslizar";
 
 /* No comment provided by engineer. */
@@ -736,11 +790,11 @@
 /* No comment provided by engineer. */
 "Go to front" = "Ir para a frente";
 
-/* paint */
-"Green" = "Verde";
-
 /* No comment provided by engineer. */
 "green" = "verde";
+
+/* paint */
+"Green" = "Verde";
 
 /* No comment provided by engineer. */
 "Guitar" = "Guitarra";
@@ -827,6 +881,9 @@
 "italic" = "itálico";
 
 /* No comment provided by engineer. */
+"item" = "item";
+
+/* No comment provided by engineer. */
 "Jan" = "Jan";
 
 /* No comment provided by engineer. */
@@ -878,10 +935,10 @@
 "left-right only" = "Apenas esquerda e direita";
 
 /* No comment provided by engineer. */
-"Length" = "Comprimento";
+"length" = "comprimento";
 
 /* No comment provided by engineer. */
-"length" = "comprimento";
+"Length" = "Comprimento";
 
 /* No comment provided by engineer. */
 "letter" = "letra";
@@ -899,6 +956,12 @@
 "Lists" = "Listas";
 
 /* No comment provided by engineer. */
+"Lists for all actors and objects" = "Lista para todos os atores e objetos";
+
+/* No comment provided by engineer. */
+"Lists for this actor or object only" = "Listas apenas para este ator ou objeto";
+
+/* No comment provided by engineer. */
 "Loading" = "Carregando";
 
 /* No comment provided by engineer. */
@@ -909,6 +972,9 @@
 
 /* No comment provided by engineer. */
 "Logic" = "Lógica";
+
+/* No comment provided by engineer. */
+"Logical (Boolean) operators and constants" = "Operadores lógicos (booleanos) e constantes";
 
 /* No comment provided by engineer. */
 "Login" = "Login";
@@ -922,11 +988,11 @@
 /* No comment provided by engineer. */
 "longitude" = "longitude";
 
-/* No comment provided by engineer. */
-"Look" = "Aparência";
-
 /* LOOK */
 "look" = "aparência";
+
+/* No comment provided by engineer. */
+"Look" = "Aparência";
 
 /* No comment provided by engineer. */
 "look name" = "nome da aparência";
@@ -953,7 +1019,13 @@
 "Marimba" = "Marimba";
 
 /* No comment provided by engineer. */
-"Math" = "Matemática";
+"Maths" = "Matemática";
+
+/* No comment provided by engineer. */
+"Maximize" = "Maximizar";
+
+/* No comment provided by engineer. */
+"maximum of" = "Maior entre";
 
 /* No comment provided by engineer. */
 "May" = "Maio";
@@ -977,6 +1049,12 @@
 "MI" = "Mi";
 
 /* No comment provided by engineer. */
+"Minimize" = "Minimizar";
+
+/* No comment provided by engineer. */
+"minimum of" = "Menor entre";
+
+/* No comment provided by engineer. */
 "minute" = "minuto";
 
 /* paint */
@@ -984,6 +1062,9 @@
 
 /* No comment provided by engineer. */
 "Mo" = "Seg";
+
+/* No comment provided by engineer. */
+"modulo" = "modulo";
 
 /* Prefix of default catrobat project object names (except background object) */
 "Mole" = "Toupeira";
@@ -1008,6 +1089,9 @@
 
 /* No comment provided by engineer. */
 "Motion" = "Movimento";
+
+/* No comment provided by engineer. */
+"Motion properties" = "Propriedades de movimento";
 
 /* No comment provided by engineer. */
 "Move" = "Mover";
@@ -1047,6 +1131,9 @@
 
 /* No comment provided by engineer. */
 "Name already exists." = "Nome já existe.";
+
+/* No comment provided by engineer. */
+"natural logarithm" = "logaritmo natural";
 
 /* No comment provided by engineer. */
 "New" = "Novo";
@@ -1112,9 +1199,6 @@
 "not available. Continue anyway?" = "indisponível. Continuar mesmo assim?";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this project. Please delete some of your projects" = "Não há memória livre suficiente para baixar este projeto. Por favor, exclua alguns de seus projetos";
-
-/* No comment provided by engineer. */
 "Not enough Memory" = "Não há memória suficiente";
 
 /* No comment provided by engineer. */
@@ -1130,7 +1214,7 @@
 "November" = "Novembro";
 
 /* No comment provided by engineer. */
-"number of items" = "Número de itens";
+"number of items" = "número de itens";
 
 /* No comment provided by engineer. */
 "Numbers" = "Números";
@@ -1139,13 +1223,7 @@
 "Object" = "Objeto";
 
 /* No comment provided by engineer. */
-"Object lists:" = "Listas de objetos:";
-
-/* No comment provided by engineer. */
 "Object or actor name" = "Nome do objeto ou do ator";
-
-/* No comment provided by engineer. */
-"Object variables:" = "Variáveis do objeto:";
 
 /* No comment provided by engineer. */
 "Oct" = "Out";
@@ -1218,6 +1296,9 @@
 
 /* No comment provided by engineer. */
 "phiro side right" = "phiro lado direito";
+
+/* No comment provided by engineer. */
+"pi" = "pi";
 
 /* No comment provided by engineer. */
 "Piano" = "Piano";
@@ -1304,7 +1385,10 @@
 "position y" = "posição_y";
 
 /* No comment provided by engineer. */
-"Preview" = "Pré-visualizar";
+"power" = "Elevar";
+
+/* No comment provided by engineer. */
+"Preview" = "Pré-visualizacão";
 
 /* No comment provided by engineer. */
 "Previous background" = "Fundo anterior";
@@ -1319,25 +1403,25 @@
 "Project" = "Projeto";
 
 /* No comment provided by engineer. */
-"Project lists:" = "Listas de Projetos:";
-
-/* No comment provided by engineer. */
 "Project name" = "Nome do projeto";
 
 /* No comment provided by engineer. */
 "Project Name is necessary!" = "Nome do projeto é necessário!";
 
 /* No comment provided by engineer. */
-"Project variables:" = "Variáveis do projeto:";
-
-/* No comment provided by engineer. */
-"Projects" = "Programas";
+"Projects" = "Projetos";
 
 /* No comment provided by engineer. */
 "Projects on device" = "Projetos";
 
 /* No comment provided by engineer. */
+"Properties" = "Objeto";
+
+/* No comment provided by engineer. */
 "random position" = "posição aleatória";
+
+/* No comment provided by engineer. */
+"random value from to" = "valor aleatório de até";
 
 /* No comment provided by engineer. */
 "Rate Us" = "Avalie-nos";
@@ -1351,11 +1435,11 @@
 /* paint */
 "Rectangle / Square" = "Rectângulo / Quadrado";
 
-/* No comment provided by engineer. */
-"red" = "vermelho";
-
 /* paint */
 "Red" = "Vermelho";
+
+/* No comment provided by engineer. */
+"red" = "vermelho";
 
 /* No comment provided by engineer. */
 "Register" = "Cadastre-se";
@@ -1364,19 +1448,22 @@
 "Registration successful" = "Cadastro bem-sucedido";
 
 /* No comment provided by engineer. */
+"regular expression" = "expressão regular";
+
+/* No comment provided by engineer. */
 "Remove known devices" = "Remover dispositivos conhecidos";
 
 /* No comment provided by engineer. */
 "Rename" = "Mudar nome";
 
 /* No comment provided by engineer. */
-"Rename actor or object" = "Renomear Objeto";
+"Rename actor or object" = "Renomear Ator ou Objeto";
 
 /* No comment provided by engineer. */
 "Rename image" = "Renomear a imagem";
 
 /* No comment provided by engineer. */
-"Rename project" = "Renomear o programa";
+"Rename project" = "Renomear projeto";
 
 /* No comment provided by engineer. */
 "Rename sound" = "Renomear Som";
@@ -1417,11 +1504,11 @@
 /* No comment provided by engineer. */
 "Saturday" = "Sábado";
 
+/* No comment provided by engineer. */
+"Save changes" = "Salvar mudanças";
+
 /* paint */
 "Save to Photos" = "Salvar em fotos";
-
-/* No comment provided by engineer. */
-"Save to PocketCode" = "Salvar em PocketCode";
 
 /* No comment provided by engineer. */
 "Saved" = "Salvo";
@@ -1430,7 +1517,7 @@
 "Saxophone" = "Saxofone";
 
 /* No comment provided by engineer. */
-"Say" = "Fale";
+"Say" = "Diga";
 
 /* No comment provided by engineer. */
 "Scene" = "Cena";
@@ -1529,10 +1616,13 @@
 "Set Phiro light" = "Definir luz do Phiro";
 
 /* No comment provided by engineer. */
-"Set rotation style" = "Definir estilo de rotação";
+"Set rotation style" = "Definir tipo de rotação";
 
 /* No comment provided by engineer. */
 "Set size to" = "Definir tamanho para";
+
+/* No comment provided by engineer. */
+"Set tempo to" = "Definir tempo para";
 
 /* No comment provided by engineer. */
 "Set transparency " = "Definir transparência ";
@@ -1560,6 +1650,9 @@
 
 /* No comment provided by engineer. */
 "Show variable" = "Mostrar variável";
+
+/* No comment provided by engineer. */
+"sine" = "sen";
 
 /* No comment provided by engineer. */
 "size" = "tamanho";
@@ -1591,20 +1684,20 @@
 /* No comment provided by engineer. */
 "Speed" = "Velocidade";
 
-/* No comment provided by engineer. */
-"sqrt" = "raizqd";
-
 /* paint */
 "square" = "quadrado";
 
 /* No comment provided by engineer. */
-"stage is touched" = "Tela está sendo tocada";
+"square root" = "raiz quadrada";
 
 /* No comment provided by engineer. */
-"stage touch x" = "Posição de toque X";
+"stage is touched" = "tela está tocada";
 
 /* No comment provided by engineer. */
-"stage touch y" = "Posição de toque Y";
+"stage touch x" = "toque x";
+
+/* No comment provided by engineer. */
+"stage touch y" = "toque y";
 
 /* paint */
 "Stamp" = "Carimbo";
@@ -1628,6 +1721,9 @@
 "steps" = "passos";
 
 /* No comment provided by engineer. */
+"Stitch" = "Costurar";
+
+/* No comment provided by engineer. */
 "Stop all sounds" = "Parar todos os sons";
 
 /* No comment provided by engineer. */
@@ -1643,6 +1739,9 @@
 "Switch to look" = "Alternar para aparência";
 
 /* No comment provided by engineer. */
+"Switch to look with number" = "Alternar para aparência de número";
+
+/* No comment provided by engineer. */
 "Syntax Error!" = "Erro de sintaxe!";
 
 /* No comment provided by engineer. */
@@ -1650,6 +1749,9 @@
 
 /* No comment provided by engineer. */
 "Synth Pad" = "Teclado Sintetizador";
+
+/* No comment provided by engineer. */
+"tangent" = "tangent";
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add actors or objects" = "Toque em \"+\" para adicionar atores ou objetos";
@@ -1665,6 +1767,9 @@
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add sounds" = "Toque em \"+\" para adicionar sons";
+
+/* No comment provided by engineer. */
+"Tap \"+\" to add variables and lists" = "Toque em \"+\" para adicionar variáveis e listas";
 
 /* Button title at the settings screen to get to the terms of use and service. */
 "Terms of Use and Service" = "Termos de Uso e Serviço";
@@ -1698,9 +1803,6 @@
 
 /* No comment provided by engineer. */
 "The recent projects cannot be loaded" = "Os projetos recentes não podem ser carregados";
-
-/* No comment provided by engineer. */
-"The requested project can not be found. Please choose a different one." = "O projeto solicitado não pode ser encontrado. Escolha um diferente.";
 
 /* No comment provided by engineer. */
 "The requested project can not be loaded. Please try again later." = "O projeto solicitado não pode ser carregado. Por favor, tente novamente mais tarde.";
@@ -1757,6 +1859,9 @@
 "Today" = "Hoje";
 
 /* No comment provided by engineer. */
+"Touch detection" = "Detecção de toque";
+
+/* No comment provided by engineer. */
 "touch position" = "posição do toque";
 
 /* No comment provided by engineer. */
@@ -1775,7 +1880,7 @@
 "Tuesday" = "Terça-Feira";
 
 /* No comment provided by engineer. */
-"Turn camera" = "Virar câmera";
+"Turn camera" = "Ligar câmera";
 
 /* No comment provided by engineer. */
 "Turn flashlight" = "Virar lanterna";
@@ -1785,6 +1890,9 @@
 
 /* No comment provided by engineer. */
 "Turn right" = "Virar à direita";
+
+/* No comment provided by engineer. */
+"Unable to import project!" = "Não foi possível importar o projeto";
 
 /* No comment provided by engineer. */
 "Unable to load project!" = "Não foi possível carregar o projeto!";
@@ -1844,7 +1952,7 @@
 "Uploaded" = "Upload Concluído";
 
 /* No comment provided by engineer. */
-"Use camera" = "Usar a câmera";
+"Use camera" = "Usar câmera de";
 
 /* No comment provided by engineer. */
 "Use Phiro bricks" = "Usar blocos Phiro";
@@ -1854,9 +1962,6 @@
 
 /* No comment provided by engineer. */
 "Username must not be blank" = "O nome de usuário não pode estar em branco";
-
-/* No comment provided by engineer. */
-"Var/List" = "Variável/Lista";
 
 /* No comment provided by engineer. */
 "Variable name:" = "Nome da variável:";
@@ -1869,6 +1974,12 @@
 
 /* No comment provided by engineer. */
 "Variables" = "Variáveis";
+
+/* No comment provided by engineer. */
+"Variables for all actors and objects" = "Variáveis para todos os atores e objetos";
+
+/* No comment provided by engineer. */
+"Variables for this actor or object only" = "Variáveis apenas para este ator ou objeto";
 
 /* No comment provided by engineer. */
 "Version" = "Versão";
@@ -1887,6 +1998,9 @@
 
 /* No comment provided by engineer. */
 "Views" = "Visualizações";
+
+/* No comment provided by engineer. */
+"Visual sensors" = "Sensores visuais";
 
 /* No comment provided by engineer. */
 "Wait" = "Aguardar";
@@ -1913,7 +2027,7 @@
 "When" = "Quando";
 
 /* No comment provided by engineer. */
-"When background changes to" = "Quando o plano de fundo mudar para";
+"When background changes to" = "Quando o fundo mudar para";
 
 /* No comment provided by engineer. */
 "When project starts" = "Quando o projeto iniciar";
@@ -1962,6 +2076,9 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "Seu projeto foi carregado para a comunidade Catrobat, onde outros podem usar e baixá-lo.";
+
+/* No comment provided by engineer. */
+"Your report was successfully sent!" = "Seu relatório foi enviado com sucesso!";
 
 /* paint */
 "Zoom" = "Ampliar";
