--- a/src/Catty/Resources/Localization/sv.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/sv.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "About Pocket Code" = "Om Pocket Code";
 
 /* No comment provided by engineer. */
+"absolute value" = "abs";
+
+/* No comment provided by engineer. */
 "acceleration x" = "acceleration x";
 
 /* No comment provided by engineer. */
@@ -101,6 +104,15 @@
 "April" = "April";
 
 /* No comment provided by engineer. */
+"arccosine" = "arccos";
+
+/* No comment provided by engineer. */
+"arcsine" = "arcsin";
+
+/* No comment provided by engineer. */
+"arctangent" = "arctan";
+
+/* No comment provided by engineer. */
 "Arduino" = "Arduino";
 
 /* No comment provided by engineer. */
@@ -169,11 +181,11 @@
 /* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Innan du kan börja koda, vänligen läs och acceptera vår sekretesspolicy för att använda appen:";
 
-/* paint */
-"Blue" = "Blå";
-
 /* No comment provided by engineer. */
 "blue" = "blå";
+
+/* paint */
+"Blue" = "Blå";
 
 /* No comment provided by engineer. */
 "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings." = "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings.";
@@ -230,7 +242,7 @@
 "Catrobat community" = "Catrobat community";
 
 /* No comment provided by engineer. */
-"ceil" = "ceil";
+"ceiling" = "tak";
 
 /* No comment provided by engineer. */
 "Cello" = "Cello";
@@ -299,6 +311,9 @@
 "color" = "färg";
 
 /* No comment provided by engineer. */
+"Comparison operators" = "Jämförelseoperatorer";
+
+/* No comment provided by engineer. */
 "compass" = "kompass";
 
 /* No comment provided by engineer. */
@@ -341,6 +356,9 @@
 "Copy" = "Kopiera";
 
 /* No comment provided by engineer. */
+"Copy actors or objects" = "Copy actors or objects";
+
+/* No comment provided by engineer. */
 "Copy brick" = "Copy brick";
 
 /* No comment provided by engineer. */
@@ -350,10 +368,19 @@
 "Copy project" = "Kopiera projekt";
 
 /* No comment provided by engineer. */
+"cosine" = "cos";
+
+/* No comment provided by engineer. */
 "Create account" = "Skapa konto";
 
 /* No comment provided by engineer. */
+"Create patterns for stiching machines" = "Create patterns for stiching machines";
+
+/* No comment provided by engineer. */
 "Data" = "Data";
+
+/* No comment provided by engineer. */
+"Date and time" = "Datum och tid";
 
 /* No comment provided by engineer. */
 "day" = "dag";
@@ -366,6 +393,9 @@
 
 /* No comment provided by engineer. */
 "December" = "December";
+
+/* No comment provided by engineer. */
+"decimal logarithm" = "log";
 
 /* No comment provided by engineer. */
 "degrees" = "grader";
@@ -461,6 +491,9 @@
 "device motion-sensor" = "device motion-sensor";
 
 /* No comment provided by engineer. */
+"Device sensors" = "Enhetssensorer";
+
+/* No comment provided by engineer. */
 "direction" = "riktning";
 
 /* No comment provided by engineer. */
@@ -479,6 +512,9 @@
 "Disagree" = "Disagree";
 
 /* No comment provided by engineer. */
+"Discard changes" = "Discard changes";
+
+/* No comment provided by engineer. */
 "Disconnect all devices" = "Koppla från alla enheter";
 
 /* No comment provided by engineer. */
@@ -488,7 +524,7 @@
 "Do you really want to delete the current drawing?" = "Vill du verkligen ta bort den aktuella ritningen?";
 
 /* paint */
-"Do you want to save the changes" = "Vill du spara ändringarna";
+"Do you want to save your changes?" = "Vill du spara ändringarna?";
 
 /* No comment provided by engineer. */
 "don't rotate" = "rotera inte";
@@ -498,9 +534,6 @@
 
 /* No comment provided by engineer. */
 "Download" = "Ladda ner";
-
-/* No comment provided by engineer. */
-"Download successful" = "Nedladdning slutförd";
 
 /* No comment provided by engineer. */
 "Downloads" = "Nerladdningar";
@@ -569,6 +602,12 @@
 "Email" = "E-post";
 
 /* No comment provided by engineer. */
+"Embroidery" = "Broderi";
+
+/* No comment provided by engineer. */
+"Embroidery extension" = "Broderi-tillägg";
+
+/* No comment provided by engineer. */
 "Empty input!" = "Empty input!";
 
 /* No comment provided by engineer. */
@@ -623,10 +662,16 @@
 "Error" = "Fel";
 
 /* No comment provided by engineer. */
+"Error occurred while reporting the project. Please try again later." = "Error occurred while reporting the project. Please try again later.";
+
+/* No comment provided by engineer. */
 "Error saving file" = "Error saving file";
 
 /* No comment provided by engineer. */
 "Event" = "Händelse";
+
+/* No comment provided by engineer. */
+"exponent" = "exp";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -704,6 +749,9 @@
 "Forgot password" = "Glömt lösenord";
 
 /* No comment provided by engineer. */
+"Formula Editor" = "Formula Editor";
+
+/* No comment provided by engineer. */
 "Formula too long!" = "Formel för lång!";
 
 /* No comment provided by engineer. */
@@ -725,6 +773,12 @@
 "Front camera" = "Front camera";
 
 /* No comment provided by engineer. */
+"Functions" = "Funktioner";
+
+/* No comment provided by engineer. */
+"General properties" = "allmänna egenskaper";
+
+/* No comment provided by engineer. */
 "Glide" = "Glid";
 
 /* No comment provided by engineer. */
@@ -736,11 +790,11 @@
 /* No comment provided by engineer. */
 "Go to front" = "Gå till framsidan";
 
-/* paint */
-"Green" = "Grön";
-
 /* No comment provided by engineer. */
 "green" = "grön";
+
+/* paint */
+"Green" = "Grön";
 
 /* No comment provided by engineer. */
 "Guitar" = "Gitarr";
@@ -827,6 +881,9 @@
 "italic" = "kursiv";
 
 /* No comment provided by engineer. */
+"item" = "element";
+
+/* No comment provided by engineer. */
 "Jan" = "Jan";
 
 /* No comment provided by engineer. */
@@ -878,10 +935,10 @@
 "left-right only" = "left-right only";
 
 /* No comment provided by engineer. */
-"Length" = "Längd";
+"length" = "Längd";
 
 /* No comment provided by engineer. */
-"length" = "Längd";
+"Length" = "Längd";
 
 /* No comment provided by engineer. */
 "letter" = "brev";
@@ -899,6 +956,12 @@
 "Lists" = "Listor";
 
 /* No comment provided by engineer. */
+"Lists for all actors and objects" = "Lists for all actors and objects";
+
+/* No comment provided by engineer. */
+"Lists for this actor or object only" = "Lists for this actor or object only";
+
+/* No comment provided by engineer. */
 "Loading" = "Laddar";
 
 /* No comment provided by engineer. */
@@ -909,6 +972,9 @@
 
 /* No comment provided by engineer. */
 "Logic" = "Logik";
+
+/* No comment provided by engineer. */
+"Logical (Boolean) operators and constants" = "Logical (Boolean) operators and constants";
 
 /* No comment provided by engineer. */
 "Login" = "Logga in";
@@ -922,11 +988,11 @@
 /* No comment provided by engineer. */
 "longitude" = "longitud";
 
-/* No comment provided by engineer. */
-"Look" = "utseende";
-
 /* LOOK */
 "look" = "Utseende";
+
+/* No comment provided by engineer. */
+"Look" = "utseende";
 
 /* No comment provided by engineer. */
 "look name" = "look_name";
@@ -953,7 +1019,13 @@
 "Marimba" = "Marimba";
 
 /* No comment provided by engineer. */
-"Math" = "Matematik";
+"Maths" = "Matematik";
+
+/* No comment provided by engineer. */
+"Maximize" = "Maximera";
+
+/* No comment provided by engineer. */
+"maximum of" = "max";
 
 /* No comment provided by engineer. */
 "May" = "Maj";
@@ -977,6 +1049,12 @@
 "MI" = "MI";
 
 /* No comment provided by engineer. */
+"Minimize" = "Minimera";
+
+/* No comment provided by engineer. */
+"minimum of" = "min";
+
+/* No comment provided by engineer. */
 "minute" = "minut";
 
 /* paint */
@@ -984,6 +1062,9 @@
 
 /* No comment provided by engineer. */
 "Mo" = "Mån";
+
+/* No comment provided by engineer. */
+"modulo" = "mod";
 
 /* Prefix of default catrobat project object names (except background object) */
 "Mole" = "Mullvad";
@@ -1008,6 +1089,9 @@
 
 /* No comment provided by engineer. */
 "Motion" = "Rörelser";
+
+/* No comment provided by engineer. */
+"Motion properties" = "Motion properties";
 
 /* No comment provided by engineer. */
 "Move" = "Flytta";
@@ -1047,6 +1131,9 @@
 
 /* No comment provided by engineer. */
 "Name already exists." = "Namnet finns redan.";
+
+/* No comment provided by engineer. */
+"natural logarithm" = "ln";
 
 /* No comment provided by engineer. */
 "New" = "Ny";
@@ -1112,9 +1199,6 @@
 "not available. Continue anyway?" = "not available. Continue anyway?";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this project. Please delete some of your projects" = "Not enough free memory to download this project. Please delete some of your projects";
-
-/* No comment provided by engineer. */
 "Not enough Memory" = "Inte tillräckligt med minne";
 
 /* No comment provided by engineer. */
@@ -1139,13 +1223,7 @@
 "Object" = "Objekt";
 
 /* No comment provided by engineer. */
-"Object lists:" = "Objektlistor:";
-
-/* No comment provided by engineer. */
 "Object or actor name" = "Object or actor name";
-
-/* No comment provided by engineer. */
-"Object variables:" = "Objektvariabler:";
 
 /* No comment provided by engineer. */
 "Oct" = "Okt";
@@ -1218,6 +1296,9 @@
 
 /* No comment provided by engineer. */
 "phiro side right" = "phiro side right";
+
+/* No comment provided by engineer. */
+"pi" = "pi";
 
 /* No comment provided by engineer. */
 "Piano" = "Piano";
@@ -1304,6 +1385,9 @@
 "position y" = "position_y";
 
 /* No comment provided by engineer. */
+"power" = "power";
+
+/* No comment provided by engineer. */
 "Preview" = "Förhandsvisa";
 
 /* No comment provided by engineer. */
@@ -1319,16 +1403,10 @@
 "Project" = "Projekt";
 
 /* No comment provided by engineer. */
-"Project lists:" = "Projektlistor:";
-
-/* No comment provided by engineer. */
 "Project name" = "Projektnamn";
 
 /* No comment provided by engineer. */
 "Project Name is necessary!" = "Projektnamn är nödvändigt!";
-
-/* No comment provided by engineer. */
-"Project variables:" = "Project variables:";
 
 /* No comment provided by engineer. */
 "Projects" = "Program";
@@ -1337,7 +1415,13 @@
 "Projects on device" = "Program";
 
 /* No comment provided by engineer. */
+"Properties" = "Objekt";
+
+/* No comment provided by engineer. */
 "random position" = "Slumpmässig position";
+
+/* No comment provided by engineer. */
+"random value from to" = "slumpmässig";
 
 /* No comment provided by engineer. */
 "Rate Us" = "Betygsätt oss";
@@ -1351,17 +1435,20 @@
 /* paint */
 "Rectangle / Square" = "Rektangel / Kvadrat";
 
-/* No comment provided by engineer. */
-"red" = "röd";
-
 /* paint */
 "Red" = "Röd";
+
+/* No comment provided by engineer. */
+"red" = "röd";
 
 /* No comment provided by engineer. */
 "Register" = "Registrera";
 
 /* No comment provided by engineer. */
 "Registration successful" = "Registrering lyckades";
+
+/* No comment provided by engineer. */
+"regular expression" = "reguljärt uttryck";
 
 /* No comment provided by engineer. */
 "Remove known devices" = "Ta bort kända enheter";
@@ -1417,11 +1504,11 @@
 /* No comment provided by engineer. */
 "Saturday" = "Lördag";
 
+/* No comment provided by engineer. */
+"Save changes" = "Save changes";
+
 /* paint */
 "Save to Photos" = "Spara till foton";
-
-/* No comment provided by engineer. */
-"Save to PocketCode" = "Spara till PocketCode";
 
 /* No comment provided by engineer. */
 "Saved" = "Sparad";
@@ -1535,6 +1622,9 @@
 "Set size to" = "Ställ in storlek för att";
 
 /* No comment provided by engineer. */
+"Set tempo to" = "Ställ in tempo till";
+
+/* No comment provided by engineer. */
 "Set transparency " = "Ange genomskinlighet ";
 
 /* No comment provided by engineer. */
@@ -1560,6 +1650,9 @@
 
 /* No comment provided by engineer. */
 "Show variable" = "Visa variabel";
+
+/* No comment provided by engineer. */
+"sine" = "sin";
 
 /* No comment provided by engineer. */
 "size" = "Storlek";
@@ -1591,11 +1684,11 @@
 /* No comment provided by engineer. */
 "Speed" = "Hastighet";
 
-/* No comment provided by engineer. */
-"sqrt" = "sqrt";
-
 /* paint */
 "square" = "square";
+
+/* No comment provided by engineer. */
+"square root" = "sqrt";
 
 /* No comment provided by engineer. */
 "stage is touched" = "screen_is_touched";
@@ -1628,6 +1721,9 @@
 "steps" = "steg";
 
 /* No comment provided by engineer. */
+"Stitch" = "Stitch";
+
+/* No comment provided by engineer. */
 "Stop all sounds" = "Stoppa alla ljud";
 
 /* No comment provided by engineer. */
@@ -1643,6 +1739,9 @@
 "Switch to look" = "byt till utseende";
 
 /* No comment provided by engineer. */
+"Switch to look with number" = "Växla till utseende med nummer";
+
+/* No comment provided by engineer. */
 "Syntax Error!" = "Syntax Error!";
 
 /* No comment provided by engineer. */
@@ -1650,6 +1749,9 @@
 
 /* No comment provided by engineer. */
 "Synth Pad" = "Synth Pad";
+
+/* No comment provided by engineer. */
+"tangent" = "Tan";
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add actors or objects" = "Tryck på \"+\" för att lägga till aktörer eller objekt";
@@ -1665,6 +1767,9 @@
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add sounds" = "Tryck på \"+\" för att lägga till ljud";
+
+/* No comment provided by engineer. */
+"Tap \"+\" to add variables and lists" = "Tap \"+\" to add variables and lists";
 
 /* Button title at the settings screen to get to the terms of use and service. */
 "Terms of Use and Service" = "Villkor för användning och tjänst";
@@ -1698,9 +1803,6 @@
 
 /* No comment provided by engineer. */
 "The recent projects cannot be loaded" = "De senaste projekten kan inte laddas";
-
-/* No comment provided by engineer. */
-"The requested project can not be found. Please choose a different one." = "The requested project can not be found. Please choose a different one.";
 
 /* No comment provided by engineer. */
 "The requested project can not be loaded. Please try again later." = "The requested project can not be loaded. Please try again later.";
@@ -1757,6 +1859,9 @@
 "Today" = "Idag";
 
 /* No comment provided by engineer. */
+"Touch detection" = "Touch detection";
+
+/* No comment provided by engineer. */
 "touch position" = "touch position";
 
 /* No comment provided by engineer. */
@@ -1785,6 +1890,9 @@
 
 /* No comment provided by engineer. */
 "Turn right" = "Sväng höger";
+
+/* No comment provided by engineer. */
+"Unable to import project!" = "Unable to import project!";
 
 /* No comment provided by engineer. */
 "Unable to load project!" = "Unable to load project!";
@@ -1856,9 +1964,6 @@
 "Username must not be blank" = "Användarnamn får inte vara tomt";
 
 /* No comment provided by engineer. */
-"Var/List" = "Var/List";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Variabelnamn:";
 
 /* No comment provided by engineer. */
@@ -1869,6 +1974,12 @@
 
 /* No comment provided by engineer. */
 "Variables" = "Variabler";
+
+/* No comment provided by engineer. */
+"Variables for all actors and objects" = "Variabler för alla aktörer och objekt";
+
+/* No comment provided by engineer. */
+"Variables for this actor or object only" = "Variabler för denna aktör eller objekt endast";
 
 /* No comment provided by engineer. */
 "Version" = "Version";
@@ -1887,6 +1998,9 @@
 
 /* No comment provided by engineer. */
 "Views" = "visningar";
+
+/* No comment provided by engineer. */
+"Visual sensors" = "Visual sensors";
 
 /* No comment provided by engineer. */
 "Wait" = "Vänta";
@@ -1962,6 +2076,9 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
+
+/* No comment provided by engineer. */
+"Your report was successfully sent!" = "Din rapport har skickats!";
 
 /* paint */
 "Zoom" = "Zooma";
