--- a/src/Catty/Resources/Localization/ta.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ta.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "About Pocket Code" = "பற்றி பாக்கெட் குறியீடு";
 
 /* No comment provided by engineer. */
+"absolute value" = "absolute value";
+
+/* No comment provided by engineer. */
 "acceleration x" = "முடுக்கம் x";
 
 /* No comment provided by engineer. */
@@ -101,6 +104,15 @@
 "April" = "ஏப்ரல்";
 
 /* No comment provided by engineer. */
+"arccosine" = "arccosine";
+
+/* No comment provided by engineer. */
+"arcsine" = "arcsine";
+
+/* No comment provided by engineer. */
+"arctangent" = "arctangent";
+
+/* No comment provided by engineer. */
 "Arduino" = "ஆர்டுயினோ";
 
 /* No comment provided by engineer. */
@@ -169,11 +181,11 @@
 /* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "Before you can start coding, please read and accept our Privacy Policy to use the app:";
 
-/* paint */
-"Blue" = "நீலம்";
-
 /* No comment provided by engineer. */
 "blue" = "நீலம்";
+
+/* paint */
+"Blue" = "நீலம்";
 
 /* No comment provided by engineer. */
 "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings." = "புளூடூத் கிடைக்கவில்லை. உங்கள் சாதனம் புளூடூத் 4.0 ஐ ஆதரிக்கவில்லை அல்லது உங்கள் புளூடூத் சிப் சேதமடைந்துள்ளது. அமைப்புகளில் உள்ள மற்றொரு புளூடூத் சாதனத்துடன் இணைப்பு மூலம் சரிபார்க்கவும்.";
@@ -230,7 +242,7 @@
 "Catrobat community" = "கேட்ரோபாட் சமூகம்";
 
 /* No comment provided by engineer. */
-"ceil" = "ceil";
+"ceiling" = "உட்கூரை";
 
 /* No comment provided by engineer. */
 "Cello" = "Cello";
@@ -299,6 +311,9 @@
 "color" = "நிறம்";
 
 /* No comment provided by engineer. */
+"Comparison operators" = "ஒப்பீட்டு ஆபரேட்டர்கள்";
+
+/* No comment provided by engineer. */
 "compass" = "திசைகாட்டி";
 
 /* No comment provided by engineer. */
@@ -341,6 +356,9 @@
 "Copy" = "நகல்";
 
 /* No comment provided by engineer. */
+"Copy actors or objects" = "Copy actors or objects";
+
+/* No comment provided by engineer. */
 "Copy brick" = "செங்கலை நகலெடுக்கவும்";
 
 /* No comment provided by engineer. */
@@ -350,10 +368,19 @@
 "Copy project" = "திட்டத்தை நகலெடுக்கவும்";
 
 /* No comment provided by engineer. */
+"cosine" = "cosine";
+
+/* No comment provided by engineer. */
 "Create account" = "கணக்கை உருவாக்கவும்";
 
 /* No comment provided by engineer. */
+"Create patterns for stiching machines" = "Create patterns for stiching machines";
+
+/* No comment provided by engineer. */
 "Data" = "தகவல்கள்";
+
+/* No comment provided by engineer. */
+"Date and time" = "தேதி மற்றும் நேரம்";
 
 /* No comment provided by engineer. */
 "day" = "நாள்";
@@ -366,6 +393,9 @@
 
 /* No comment provided by engineer. */
 "December" = "டிசம்பர்";
+
+/* No comment provided by engineer. */
+"decimal logarithm" = "decimal logarithm";
 
 /* No comment provided by engineer. */
 "degrees" = "டிகிரிக்கள்";
@@ -461,6 +491,9 @@
 "device motion-sensor" = "சாதன இயக்கம்-சென்சார்";
 
 /* No comment provided by engineer. */
+"Device sensors" = "சாதன உணரிகள்";
+
+/* No comment provided by engineer. */
 "direction" = "திசை";
 
 /* No comment provided by engineer. */
@@ -479,6 +512,9 @@
 "Disagree" = "மறுக்கிறேன்";
 
 /* No comment provided by engineer. */
+"Discard changes" = "Discard changes";
+
+/* No comment provided by engineer. */
 "Disconnect all devices" = "எல்லா சாதனங்களையும் துண்டிக்கவும்";
 
 /* No comment provided by engineer. */
@@ -488,7 +524,7 @@
 "Do you really want to delete the current drawing?" = "தற்போதைய வரைபடத்தை நீக்க விரும்புகிறீர்களா?";
 
 /* paint */
-"Do you want to save the changes" = "மாற்றங்களைச் சேமிக்க விரும்புகிறீர்களா";
+"Do you want to save your changes?" = "மாற்றங்களைச் சேமிக்க விரும்புகிறீர்களா?";
 
 /* No comment provided by engineer. */
 "don't rotate" = "சுழற்ற வேண்டாம்";
@@ -498,9 +534,6 @@
 
 /* No comment provided by engineer. */
 "Download" = "பதிவிறக்கம்";
-
-/* No comment provided by engineer. */
-"Download successful" = "பதிவிறக்கம் வெற்றிகரம்";
 
 /* No comment provided by engineer. */
 "Downloads" = "பதிவிறக்கங்கள்";
@@ -569,6 +602,12 @@
 "Email" = "மின்னஞ்சல்";
 
 /* No comment provided by engineer. */
+"Embroidery" = "எம்பிராய்டரி";
+
+/* No comment provided by engineer. */
+"Embroidery extension" = "எம்பிராய்டரி நீட்டிப்பு";
+
+/* No comment provided by engineer. */
 "Empty input!" = "வெற்று உள்ளீடு!";
 
 /* No comment provided by engineer. */
@@ -623,10 +662,16 @@
 "Error" = "தவறு";
 
 /* No comment provided by engineer. */
+"Error occurred while reporting the project. Please try again later." = "Error occurred while reporting the project. Please try again later.";
+
+/* No comment provided by engineer. */
 "Error saving file" = "கோப்பைச் சேமிப்பதில் பிழை";
 
 /* No comment provided by engineer. */
 "Event" = "நிகழ்வு";
+
+/* No comment provided by engineer. */
+"exponent" = "exponent";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -704,6 +749,9 @@
 "Forgot password" = "கடவுச்சொல்லை மறந்துவிட்டீர்களா\n";
 
 /* No comment provided by engineer. */
+"Formula Editor" = "Formula Editor";
+
+/* No comment provided by engineer. */
 "Formula too long!" = "ஃபார்முலா மிக நீளமானது!";
 
 /* No comment provided by engineer. */
@@ -725,6 +773,12 @@
 "Front camera" = "முன் கேமரா";
 
 /* No comment provided by engineer. */
+"Functions" = "பணிகள்";
+
+/* No comment provided by engineer. */
+"General properties" = "பொது பண்புகள்";
+
+/* No comment provided by engineer. */
 "Glide" = "சறுக்கு";
 
 /* No comment provided by engineer. */
@@ -736,11 +790,11 @@
 /* No comment provided by engineer. */
 "Go to front" = "முன் செல்லுங்கள்";
 
-/* paint */
-"Green" = "பச்சை";
-
 /* No comment provided by engineer. */
 "green" = "பச்சை";
+
+/* paint */
+"Green" = "பச்சை";
 
 /* No comment provided by engineer. */
 "Guitar" = "Guitar";
@@ -827,6 +881,9 @@
 "italic" = "சாய்வெழுத்து";
 
 /* No comment provided by engineer. */
+"item" = "உருப்படி";
+
+/* No comment provided by engineer. */
 "Jan" = "Jan";
 
 /* No comment provided by engineer. */
@@ -878,10 +935,10 @@
 "left-right only" = "இடது-வலது மட்டும்";
 
 /* No comment provided by engineer. */
-"Length" = "நீளம்";
+"length" = "நீளம்";
 
 /* No comment provided by engineer. */
-"length" = "நீளம்";
+"Length" = "நீளம்";
 
 /* No comment provided by engineer. */
 "letter" = "கடிதம்";
@@ -899,6 +956,12 @@
 "Lists" = "பட்டியல்கள்";
 
 /* No comment provided by engineer. */
+"Lists for all actors and objects" = "அனைத்து நடிகர்கள் மற்றும் பொருள்களுக்கான பட்டியல்கள்";
+
+/* No comment provided by engineer. */
+"Lists for this actor or object only" = "இந்த நடிகர் அல்லது பொருளுக்கு மட்டுமே பட்டியல்கள்";
+
+/* No comment provided by engineer. */
 "Loading" = "ஏற்றுதல்";
 
 /* No comment provided by engineer. */
@@ -909,6 +972,9 @@
 
 /* No comment provided by engineer. */
 "Logic" = "தர்க்கம்";
+
+/* No comment provided by engineer. */
+"Logical (Boolean) operators and constants" = "தருக்க (பூலியன்) ஆபரேட்டர்கள் மற்றும் மாறிலிகள்";
 
 /* No comment provided by engineer. */
 "Login" = "உள்நுழை";
@@ -922,11 +988,11 @@
 /* No comment provided by engineer. */
 "longitude" = "தீர்க்கரேகை";
 
-/* No comment provided by engineer. */
-"Look" = "தோற்றம்";
-
 /* LOOK */
 "look" = "தோற்றம்";
+
+/* No comment provided by engineer. */
+"Look" = "தோற்றம்";
 
 /* No comment provided by engineer. */
 "look name" = " பெயர் பார்\n";
@@ -953,7 +1019,13 @@
 "Marimba" = "Marimba";
 
 /* No comment provided by engineer. */
-"Math" = "கணிதம்";
+"Maths" = "கணிதம்";
+
+/* No comment provided by engineer. */
+"Maximize" = "Maximize";
+
+/* No comment provided by engineer. */
+"maximum of" = "அதிகபட்சம்";
 
 /* No comment provided by engineer. */
 "May" = "மே";
@@ -977,6 +1049,12 @@
 "MI" = "MI";
 
 /* No comment provided by engineer. */
+"Minimize" = "Minimize";
+
+/* No comment provided by engineer. */
+"minimum of" = "குறைந்தபட்சம்";
+
+/* No comment provided by engineer. */
 "minute" = "நிமிடம்";
 
 /* paint */
@@ -984,6 +1062,9 @@
 
 /* No comment provided by engineer. */
 "Mo" = "Mo";
+
+/* No comment provided by engineer. */
+"modulo" = "modulo";
 
 /* Prefix of default catrobat project object names (except background object) */
 "Mole" = "மச்சம்";
@@ -1008,6 +1089,9 @@
 
 /* No comment provided by engineer. */
 "Motion" = "மோஷன்";
+
+/* No comment provided by engineer. */
+"Motion properties" = "இயக்க பண்புகள்";
 
 /* No comment provided by engineer. */
 "Move" = "நகர்த்து";
@@ -1047,6 +1131,9 @@
 
 /* No comment provided by engineer. */
 "Name already exists." = "பெயர் ஏற்கனவே உள்ளது.";
+
+/* No comment provided by engineer. */
+"natural logarithm" = "natural logarithm";
 
 /* No comment provided by engineer. */
 "New" = "புதிய";
@@ -1112,9 +1199,6 @@
 "not available. Continue anyway?" = "கிடைக்கவில்லை. எப்படியும் தொடரவா?";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this project. Please delete some of your projects" = "இந்த திட்டத்தைப் பதிவிறக்க போதுமான இலவச நினைவகம் இல்லை. உங்கள் சில திட்டங்களை நீக்கவும்";
-
-/* No comment provided by engineer. */
 "Not enough Memory" = "போதுமான சேமிப்பிடம் இல்லை";
 
 /* No comment provided by engineer. */
@@ -1139,13 +1223,7 @@
 "Object" = "பொருள்";
 
 /* No comment provided by engineer. */
-"Object lists:" = "பொருள் பட்டியல்கள்:";
-
-/* No comment provided by engineer. */
 "Object or actor name" = "பொருள் அல்லது நடிகரின் பெயர்";
-
-/* No comment provided by engineer. */
-"Object variables:" = "பொருள் மாறிகள்:";
 
 /* No comment provided by engineer. */
 "Oct" = "Oct";
@@ -1218,6 +1296,9 @@
 
 /* No comment provided by engineer. */
 "phiro side right" = "பைரோ பக்க வலது";
+
+/* No comment provided by engineer. */
+"pi" = "pi";
 
 /* No comment provided by engineer. */
 "Piano" = "Piano";
@@ -1304,6 +1385,9 @@
 "position y" = "நிலை y";
 
 /* No comment provided by engineer. */
+"power" = "ஆற்றல்";
+
+/* No comment provided by engineer. */
 "Preview" = "முன்னோட்டம்";
 
 /* No comment provided by engineer. */
@@ -1319,16 +1403,10 @@
 "Project" = "திட்டம்";
 
 /* No comment provided by engineer. */
-"Project lists:" = "திட்ட பட்டியல்கள்:";
-
-/* No comment provided by engineer. */
 "Project name" = "செயற்திட்டத்தின் பெயர்";
 
 /* No comment provided by engineer. */
 "Project Name is necessary!" = "திட்டத்தின் பெயர் அவசியம்!";
-
-/* No comment provided by engineer. */
-"Project variables:" = "திட்ட மாறிகள்:";
 
 /* No comment provided by engineer. */
 "Projects" = "திட்டங்கள்";
@@ -1337,7 +1415,13 @@
 "Projects on device" = "சாதனத்தில் உள்ள திட்டங்கள்";
 
 /* No comment provided by engineer. */
+"Properties" = "பொருள்";
+
+/* No comment provided by engineer. */
 "random position" = "சீரற்ற நிலை";
+
+/* No comment provided by engineer. */
+"random value from to" = "சீரற்ற மதிப்பு முதல் வரை";
 
 /* No comment provided by engineer. */
 "Rate Us" = "எங்களுக்கு மதிப்பிடுக";
@@ -1351,17 +1435,20 @@
 /* paint */
 "Rectangle / Square" = "செவ்வகம் / சதுரம்";
 
-/* No comment provided by engineer. */
-"red" = "சிவப்பு";
-
 /* paint */
 "Red" = "சிவப்பு";
+
+/* No comment provided by engineer. */
+"red" = "சிவப்பு";
 
 /* No comment provided by engineer. */
 "Register" = "பதிவு";
 
 /* No comment provided by engineer. */
 "Registration successful" = "பதிவு ஏற்றுகொள்ளப்பட்டது";
+
+/* No comment provided by engineer. */
+"regular expression" = "வழக்கமான வெளிப்பாடு";
 
 /* No comment provided by engineer. */
 "Remove known devices" = "தெரிந்த சாதனங்களை அகற்று";
@@ -1417,11 +1504,11 @@
 /* No comment provided by engineer. */
 "Saturday" = "சனிக்கிழமை";
 
+/* No comment provided by engineer. */
+"Save changes" = "Save changes";
+
 /* paint */
 "Save to Photos" = "Save to Photos";
-
-/* No comment provided by engineer. */
-"Save to PocketCode" = "பாக்கெட் குறியீட்டில் சேமிக்கவும்";
 
 /* No comment provided by engineer. */
 "Saved" = "சேமிக்கப்பட்டது";
@@ -1535,6 +1622,9 @@
 "Set size to" = "அளவை அமைக்கவும்";
 
 /* No comment provided by engineer. */
+"Set tempo to" = "Set tempo to";
+
+/* No comment provided by engineer. */
 "Set transparency " = "வெளிப்படைத்தன்மையை அமைக்கவும் ";
 
 /* No comment provided by engineer. */
@@ -1560,6 +1650,9 @@
 
 /* No comment provided by engineer. */
 "Show variable" = "மாறியை காட்டுக";
+
+/* No comment provided by engineer. */
+"sine" = "sine";
 
 /* No comment provided by engineer. */
 "size" = "அளவு";
@@ -1591,11 +1684,11 @@
 /* No comment provided by engineer. */
 "Speed" = "வேகம்";
 
-/* No comment provided by engineer. */
-"sqrt" = "sqrt";
-
 /* paint */
 "square" = "சதுரம்";
+
+/* No comment provided by engineer. */
+"square root" = "வர்க்க மூலம்";
 
 /* No comment provided by engineer. */
 "stage is touched" = "மேடை தொட்டது";
@@ -1628,6 +1721,9 @@
 "steps" = "படிகள்";
 
 /* No comment provided by engineer. */
+"Stitch" = "தைத்து";
+
+/* No comment provided by engineer. */
 "Stop all sounds" = "எல்லா ஒலிகளையும் நிறுத்துங்கள்";
 
 /* No comment provided by engineer. */
@@ -1643,6 +1739,9 @@
 "Switch to look" = "தோற்றத்திற்கு மாறவும்";
 
 /* No comment provided by engineer. */
+"Switch to look with number" = "எண்ணுடன் பார்க்க மாறவும்";
+
+/* No comment provided by engineer. */
 "Syntax Error!" = "தொடரியல் பிழை!";
 
 /* No comment provided by engineer. */
@@ -1650,6 +1749,9 @@
 
 /* No comment provided by engineer. */
 "Synth Pad" = "Synth Pad";
+
+/* No comment provided by engineer. */
+"tangent" = "tangent";
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add actors or objects" = "நடிகர்கள் அல்லது பொருள்களைச் சேர்க்க \"+\" தட்டவும்";
@@ -1665,6 +1767,9 @@
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add sounds" = "ஒலிகளைச் சேர்க்க \"+\" தட்டவும்";
+
+/* No comment provided by engineer. */
+"Tap \"+\" to add variables and lists" = "Tap \"+\" to add variables and lists";
 
 /* Button title at the settings screen to get to the terms of use and service. */
 "Terms of Use and Service" = "பயன்பாட்டு விதிகள் மற்றும் சேவைகள்";
@@ -1698,9 +1803,6 @@
 
 /* No comment provided by engineer. */
 "The recent projects cannot be loaded" = "சமீபத்திய திட்டங்களை ஏற்ற முடியாது";
-
-/* No comment provided by engineer. */
-"The requested project can not be found. Please choose a different one." = "கோரப்பட்ட திட்டத்தை கண்டுபிடிக்க முடியவில்லை. தயவுசெய்து வேறு ஒன்றைத் தேர்ந்தெடுக்கவும்.";
 
 /* No comment provided by engineer. */
 "The requested project can not be loaded. Please try again later." = "கோரப்பட்ட திட்டத்தை ஏற்ற முடியாது. பின்னர் மீண்டும் முயற்சிக்கவும்.";
@@ -1757,6 +1859,9 @@
 "Today" = "இன்று";
 
 /* No comment provided by engineer. */
+"Touch detection" = "தொடு கண்டறிதல்";
+
+/* No comment provided by engineer. */
 "touch position" = "தொடு நிலை";
 
 /* No comment provided by engineer. */
@@ -1785,6 +1890,9 @@
 
 /* No comment provided by engineer. */
 "Turn right" = "வலதுபுறம் திரும்ப";
+
+/* No comment provided by engineer. */
+"Unable to import project!" = "Unable to import project!";
 
 /* No comment provided by engineer. */
 "Unable to load project!" = "திட்டத்தை ஏற்ற முடியவில்லை!";
@@ -1856,9 +1964,6 @@
 "Username must not be blank" = "பயனர்பெயர் காலியாக இருக்கக்கூடாது";
 
 /* No comment provided by engineer. */
-"Var/List" = "Var / பட்டியல்";
-
-/* No comment provided by engineer. */
 "Variable name:" = "மாறியின் பெயர்:";
 
 /* No comment provided by engineer. */
@@ -1869,6 +1974,12 @@
 
 /* No comment provided by engineer. */
 "Variables" = "மாறிகள்";
+
+/* No comment provided by engineer. */
+"Variables for all actors and objects" = "அனைத்து நடிகர்கள் மற்றும் பொருள்களுக்கான மாறுபாடுகள்";
+
+/* No comment provided by engineer. */
+"Variables for this actor or object only" = "இந்த நடிகர் அல்லது பொருளுக்கு மட்டுமே மாறுபாடுகள்";
 
 /* No comment provided by engineer. */
 "Version" = "பதிப்பு";
@@ -1887,6 +1998,9 @@
 
 /* No comment provided by engineer. */
 "Views" = "பார்வைகள்";
+
+/* No comment provided by engineer. */
+"Visual sensors" = "Visual sensors";
 
 /* No comment provided by engineer. */
 "Wait" = "காத்திரு";
@@ -1962,6 +2076,9 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
+
+/* No comment provided by engineer. */
+"Your report was successfully sent!" = "உங்கள் அறிக்கை வெற்றிகரமாக அனுப்பப்பட்டது!";
 
 /* paint */
 "Zoom" = "பெரிதாக்கு";
