--- a/src/Catty/Resources/Localization/th.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/th.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "About Pocket Code" = "เกี่ยวกับ Pocket Code";
 
 /* No comment provided by engineer. */
+"absolute value" = "abs";
+
+/* No comment provided by engineer. */
 "acceleration x" = "ความเร่ง_x";
 
 /* No comment provided by engineer. */
@@ -101,6 +104,15 @@
 "April" = "เมษายน";
 
 /* No comment provided by engineer. */
+"arccosine" = "arccos";
+
+/* No comment provided by engineer. */
+"arcsine" = "arcsin";
+
+/* No comment provided by engineer. */
+"arctangent" = "arctan";
+
+/* No comment provided by engineer. */
 "Arduino" = "Arduino";
 
 /* No comment provided by engineer. */
@@ -169,11 +181,11 @@
 /* No comment provided by engineer. */
 "Before you can start coding, please read and accept our Privacy Policy to use the app:" = "ก่อนที่คุณจะเริ่มการเข้ารหัสโปรดอ่านและยอมรับนโยบายความเป็นส่วนตัวของเราเพื่อใช้แอพ:";
 
-/* paint */
-"Blue" = "สีน้ำเงิน";
-
 /* No comment provided by engineer. */
 "blue" = "สีน้ำเงิน";
+
+/* paint */
+"Blue" = "สีน้ำเงิน";
 
 /* No comment provided by engineer. */
 "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings." = "Bluetooth is not available. Either your device does not support Bluetooth 4.0 or your Bluetooth chip is damaged. Please check it by connection to another Bluetooth device in the Settings.";
@@ -230,7 +242,7 @@
 "Catrobat community" = "ชุมชน Catrobat";
 
 /* No comment provided by engineer. */
-"ceil" = "ceil";
+"ceiling" = "เพดาน";
 
 /* No comment provided by engineer. */
 "Cello" = "เชลโล";
@@ -299,6 +311,9 @@
 "color" = "สี";
 
 /* No comment provided by engineer. */
+"Comparison operators" = "ผู้ประกอบการเปรียบเทียบ";
+
+/* No comment provided by engineer. */
 "compass" = "compass";
 
 /* No comment provided by engineer. */
@@ -341,6 +356,9 @@
 "Copy" = "คัด​ลอก";
 
 /* No comment provided by engineer. */
+"Copy actors or objects" = "คัดลอกนักแสดงหรือวัตถุ";
+
+/* No comment provided by engineer. */
 "Copy brick" = "คัดลอกคำสั่ง";
 
 /* No comment provided by engineer. */
@@ -350,10 +368,19 @@
 "Copy project" = "Copy project";
 
 /* No comment provided by engineer. */
+"cosine" = "cos";
+
+/* No comment provided by engineer. */
 "Create account" = "Create account";
 
 /* No comment provided by engineer. */
+"Create patterns for stiching machines" = "สร้างรูปแบบสำหรับเครื่องเย็บ";
+
+/* No comment provided by engineer. */
 "Data" = "ข้อมูล";
+
+/* No comment provided by engineer. */
+"Date and time" = "วันและเวลา";
 
 /* No comment provided by engineer. */
 "day" = "day";
@@ -366,6 +393,9 @@
 
 /* No comment provided by engineer. */
 "December" = "ธันวาคม";
+
+/* No comment provided by engineer. */
+"decimal logarithm" = "log";
 
 /* No comment provided by engineer. */
 "degrees" = "องศา";
@@ -461,6 +491,9 @@
 "device motion-sensor" = "device motion-sensor";
 
 /* No comment provided by engineer. */
+"Device sensors" = "เซ็นเซอร์อุปกรณ์";
+
+/* No comment provided by engineer. */
 "direction" = "ทิศทาง";
 
 /* No comment provided by engineer. */
@@ -479,6 +512,9 @@
 "Disagree" = "ไม่เห็นด้วย";
 
 /* No comment provided by engineer. */
+"Discard changes" = "ยกเลิกการเปลี่ยนแปลง";
+
+/* No comment provided by engineer. */
 "Disconnect all devices" = "Disconnect all devices";
 
 /* No comment provided by engineer. */
@@ -488,7 +524,7 @@
 "Do you really want to delete the current drawing?" = "คุณต้องการจะลบภาพที่กำลังวาดนี้จริงหรือ";
 
 /* paint */
-"Do you want to save the changes" = "คุณต้องการจะบันทึกการเปลี่ยนแปลงนี้หรือไม่";
+"Do you want to save your changes?" = "คุณต้องบันทึกการเปลี่ยนแปลงหรือไม่?";
 
 /* No comment provided by engineer. */
 "don't rotate" = "อย่าหมุน";
@@ -498,9 +534,6 @@
 
 /* No comment provided by engineer. */
 "Download" = "ดาวน์โหลด";
-
-/* No comment provided by engineer. */
-"Download successful" = "ดาวน์โหลดเสร็จเรียบร้อย";
 
 /* No comment provided by engineer. */
 "Downloads" = "ดาวน์โหลด";
@@ -569,6 +602,12 @@
 "Email" = "Email";
 
 /* No comment provided by engineer. */
+"Embroidery" = "การตกแต่ง";
+
+/* No comment provided by engineer. */
+"Embroidery extension" = "การต่อเย็บปักถักร้อย";
+
+/* No comment provided by engineer. */
 "Empty input!" = "Empty input!";
 
 /* No comment provided by engineer. */
@@ -623,10 +662,16 @@
 "Error" = "ผิดพลาด";
 
 /* No comment provided by engineer. */
+"Error occurred while reporting the project. Please try again later." = "เกิดข้อผิดพลาดขณะรายงานโครงการ กรุณาลองใหม่อีกครั้งในภายหลัง.";
+
+/* No comment provided by engineer. */
 "Error saving file" = "Error saving file";
 
 /* No comment provided by engineer. */
 "Event" = "เหตุการณ์";
+
+/* No comment provided by engineer. */
+"exponent" = "exp";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -704,6 +749,9 @@
 "Forgot password" = "ลืมรหัสผ่าน";
 
 /* No comment provided by engineer. */
+"Formula Editor" = "ตัวแก้ไขสูตร";
+
+/* No comment provided by engineer. */
 "Formula too long!" = "สูตรยาวเกินไป!";
 
 /* No comment provided by engineer. */
@@ -725,6 +773,12 @@
 "Front camera" = "Front camera";
 
 /* No comment provided by engineer. */
+"Functions" = "ฟังก์ชัน";
+
+/* No comment provided by engineer. */
+"General properties" = "คุณสมบัติทั่วไป";
+
+/* No comment provided by engineer. */
 "Glide" = "ไถล";
 
 /* No comment provided by engineer. */
@@ -736,11 +790,11 @@
 /* No comment provided by engineer. */
 "Go to front" = "ย้ายขึ้นข้างบน";
 
-/* paint */
-"Green" = "สีเขียว";
-
 /* No comment provided by engineer. */
 "green" = "สีเขียว";
+
+/* paint */
+"Green" = "สีเขียว";
 
 /* No comment provided by engineer. */
 "Guitar" = "กีตาร์";
@@ -827,6 +881,9 @@
 "italic" = "italic";
 
 /* No comment provided by engineer. */
+"item" = "ชิ้น";
+
+/* No comment provided by engineer. */
 "Jan" = "ม.ค";
 
 /* No comment provided by engineer. */
@@ -878,10 +935,10 @@
 "left-right only" = "ซ้าย - ขวาเท่านั้น";
 
 /* No comment provided by engineer. */
-"Length" = "ความยาว";
+"length" = "ความยาว";
 
 /* No comment provided by engineer. */
-"length" = "ความยาว";
+"Length" = "ความยาว";
 
 /* No comment provided by engineer. */
 "letter" = "ตัวอักษร";
@@ -899,6 +956,12 @@
 "Lists" = "รายการ";
 
 /* No comment provided by engineer. */
+"Lists for all actors and objects" = "รายการสำหรับนักแสดงและวัตถุทั้งหมด";
+
+/* No comment provided by engineer. */
+"Lists for this actor or object only" = "รายการสำหรับนักแสดงหรือวัตถุนี้เท่านั้น";
+
+/* No comment provided by engineer. */
 "Loading" = "กำลังโหลด…";
 
 /* No comment provided by engineer. */
@@ -909,6 +972,9 @@
 
 /* No comment provided by engineer. */
 "Logic" = "ตรรกะ";
+
+/* No comment provided by engineer. */
+"Logical (Boolean) operators and constants" = "ตัวดำเนินการเชิงตรรกะ (บูลีน) และค่าคงที่";
 
 /* No comment provided by engineer. */
 "Login" = "เข้าสู่ระบบ";
@@ -922,11 +988,11 @@
 /* No comment provided by engineer. */
 "longitude" = "longitude";
 
-/* No comment provided by engineer. */
-"Look" = "รูปลักษณ์";
-
 /* LOOK */
 "look" = "ดู";
+
+/* No comment provided by engineer. */
+"Look" = "รูปลักษณ์";
 
 /* No comment provided by engineer. */
 "look name" = "ดูชื่อ";
@@ -953,7 +1019,13 @@
 "Marimba" = "ระนาด";
 
 /* No comment provided by engineer. */
-"Math" = "คณิตศาสตร์";
+"Maths" = "เลข";
+
+/* No comment provided by engineer. */
+"Maximize" = "ขยายใหญ่สุด";
+
+/* No comment provided by engineer. */
+"maximum of" = "สูงสุดของ";
 
 /* No comment provided by engineer. */
 "May" = "พฤษภาคม";
@@ -977,6 +1049,12 @@
 "MI" = "MI";
 
 /* No comment provided by engineer. */
+"Minimize" = "ย่อเล็กสุด";
+
+/* No comment provided by engineer. */
+"minimum of" = "ขั้นต่ำของ";
+
+/* No comment provided by engineer. */
 "minute" = "minute";
 
 /* paint */
@@ -984,6 +1062,9 @@
 
 /* No comment provided by engineer. */
 "Mo" = "วันจันทร์";
+
+/* No comment provided by engineer. */
+"modulo" = "mod";
 
 /* Prefix of default catrobat project object names (except background object) */
 "Mole" = "ตัวตุ่น";
@@ -1008,6 +1089,9 @@
 
 /* No comment provided by engineer. */
 "Motion" = "เคลื่อนไหว";
+
+/* No comment provided by engineer. */
+"Motion properties" = "คุณสมบัติเคลื่อนที่";
 
 /* No comment provided by engineer. */
 "Move" = "เคลื่อน";
@@ -1047,6 +1131,9 @@
 
 /* No comment provided by engineer. */
 "Name already exists." = "Name already exists.";
+
+/* No comment provided by engineer. */
+"natural logarithm" = "ln";
 
 /* No comment provided by engineer. */
 "New" = "สร้างใหม่";
@@ -1112,9 +1199,6 @@
 "not available. Continue anyway?" = "not available. Continue anyway?";
 
 /* No comment provided by engineer. */
-"Not enough free memory to download this project. Please delete some of your projects" = "Not enough free memory to download this project. Please delete some of your projects";
-
-/* No comment provided by engineer. */
 "Not enough Memory" = "หน่วยความจำไม่เพียงพอ";
 
 /* No comment provided by engineer. */
@@ -1139,13 +1223,7 @@
 "Object" = "วัตถุ";
 
 /* No comment provided by engineer. */
-"Object lists:" = "Object lists:";
-
-/* No comment provided by engineer. */
 "Object or actor name" = "ชื่อวัตถุหรือนักแสดง";
-
-/* No comment provided by engineer. */
-"Object variables:" = "Object variables:";
 
 /* No comment provided by engineer. */
 "Oct" = "ต.ค";
@@ -1218,6 +1296,9 @@
 
 /* No comment provided by engineer. */
 "phiro side right" = "phiro เซ็นเซอร์ด้านขวา";
+
+/* No comment provided by engineer. */
+"pi" = "pi";
 
 /* No comment provided by engineer. */
 "Piano" = "เปียโน";
@@ -1304,6 +1385,9 @@
 "position y" = "ตำแหน่ง_y";
 
 /* No comment provided by engineer. */
+"power" = "กำลัง";
+
+/* No comment provided by engineer. */
 "Preview" = "แสดงตัวอย่าง";
 
 /* No comment provided by engineer. */
@@ -1319,16 +1403,10 @@
 "Project" = "โครงการ";
 
 /* No comment provided by engineer. */
-"Project lists:" = "Project lists:";
-
-/* No comment provided by engineer. */
 "Project name" = "ชื่อโครงการ";
 
 /* No comment provided by engineer. */
 "Project Name is necessary!" = "Project Name is necessary!";
-
-/* No comment provided by engineer. */
-"Project variables:" = "Project variables:";
 
 /* No comment provided by engineer. */
 "Projects" = "โปรแกรม";
@@ -1337,7 +1415,13 @@
 "Projects on device" = "โครงการบนอุปกรณ์​";
 
 /* No comment provided by engineer. */
+"Properties" = "วัตถุ";
+
+/* No comment provided by engineer. */
 "random position" = "ตำแหน่งสุ่ม";
+
+/* No comment provided by engineer. */
+"random value from to" = "สุ่มค่า";
 
 /* No comment provided by engineer. */
 "Rate Us" = "ให้คะแนนเรา";
@@ -1351,17 +1435,20 @@
 /* paint */
 "Rectangle / Square" = "Rectangle / Square";
 
-/* No comment provided by engineer. */
-"red" = "สีแดง";
-
 /* paint */
 "Red" = "สีแดง";
+
+/* No comment provided by engineer. */
+"red" = "สีแดง";
 
 /* No comment provided by engineer. */
 "Register" = "Register";
 
 /* No comment provided by engineer. */
 "Registration successful" = "Registration successful";
+
+/* No comment provided by engineer. */
+"regular expression" = "การแสดงออกปกติ";
 
 /* No comment provided by engineer. */
 "Remove known devices" = "Remove known devices";
@@ -1417,11 +1504,11 @@
 /* No comment provided by engineer. */
 "Saturday" = "วันเสาร์";
 
+/* No comment provided by engineer. */
+"Save changes" = "บันทึกการเปลี่ยนแปลง";
+
 /* paint */
 "Save to Photos" = "บันทึกลงใน Photos";
-
-/* No comment provided by engineer. */
-"Save to PocketCode" = "บันทึกไปยังแฟ้ม PocketCode";
 
 /* No comment provided by engineer. */
 "Saved" = "บันทึกเรียบร้อย";
@@ -1535,6 +1622,9 @@
 "Set size to" = "ตั้งขนาดให้เป็น";
 
 /* No comment provided by engineer. */
+"Set tempo to" = "ตั้งเวลาเป็น";
+
+/* No comment provided by engineer. */
 "Set transparency " = "ตั้งค่าความโปร่งใส ";
 
 /* No comment provided by engineer. */
@@ -1560,6 +1650,9 @@
 
 /* No comment provided by engineer. */
 "Show variable" = "Show variable";
+
+/* No comment provided by engineer. */
+"sine" = "sin";
 
 /* No comment provided by engineer. */
 "size" = "ขนาด";
@@ -1591,11 +1684,11 @@
 /* No comment provided by engineer. */
 "Speed" = "ความเร็ว";
 
-/* No comment provided by engineer. */
-"sqrt" = "sqrt";
-
 /* paint */
 "square" = "สี่เหลี่ยม";
+
+/* No comment provided by engineer. */
+"square root" = "รากที่สอง";
 
 /* No comment provided by engineer. */
 "stage is touched" = "เวทีสัมผัสแล้ว";
@@ -1628,6 +1721,9 @@
 "steps" = "ก้าว";
 
 /* No comment provided by engineer. */
+"Stitch" = "ตะเข็บ";
+
+/* No comment provided by engineer. */
 "Stop all sounds" = "หยุดเสียงทั้งหมด";
 
 /* No comment provided by engineer. */
@@ -1643,6 +1739,9 @@
 "Switch to look" = "เปลี่ยนรูปลักษณ์เป็น";
 
 /* No comment provided by engineer. */
+"Switch to look with number" = "Switch to look with number";
+
+/* No comment provided by engineer. */
 "Syntax Error!" = "ไวยากรณ์ผิดพลาด!";
 
 /* No comment provided by engineer. */
@@ -1650,6 +1749,9 @@
 
 /* No comment provided by engineer. */
 "Synth Pad" = "Synth Pad";
+
+/* No comment provided by engineer. */
+"tangent" = "tan";
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add actors or objects" = "แตะ \"+\" เพื่อเพิ่มนักแสดงหรือวัตถุ";
@@ -1665,6 +1767,9 @@
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add sounds" = "เคาะ \"+\" เพื่อใส่เสียง";
+
+/* No comment provided by engineer. */
+"Tap \"+\" to add variables and lists" = "Tap \"+\" to add variables and lists";
 
 /* Button title at the settings screen to get to the terms of use and service. */
 "Terms of Use and Service" = "ข้อกำหนดการใช้งานและบริการ";
@@ -1698,9 +1803,6 @@
 
 /* No comment provided by engineer. */
 "The recent projects cannot be loaded" = "The recent projects cannot be loaded";
-
-/* No comment provided by engineer. */
-"The requested project can not be found. Please choose a different one." = "The requested project can not be found. Please choose a different one.";
 
 /* No comment provided by engineer. */
 "The requested project can not be loaded. Please try again later." = "The requested project can not be loaded. Please try again later.";
@@ -1757,6 +1859,9 @@
 "Today" = "วันนี้";
 
 /* No comment provided by engineer. */
+"Touch detection" = "ตรวจจับการสัมผัส";
+
+/* No comment provided by engineer. */
 "touch position" = "ตำแหน่งสัมผัส";
 
 /* No comment provided by engineer. */
@@ -1785,6 +1890,9 @@
 
 /* No comment provided by engineer. */
 "Turn right" = "เลี้ยวขวา";
+
+/* No comment provided by engineer. */
+"Unable to import project!" = "ไม่สามารถนำเข้าโครงการได้";
 
 /* No comment provided by engineer. */
 "Unable to load project!" = "Unable to load project!";
@@ -1856,9 +1964,6 @@
 "Username must not be blank" = "ชื่อผู้ใช้ต้องไม่ว่างเปล่า";
 
 /* No comment provided by engineer. */
-"Var/List" = "Var/List";
-
-/* No comment provided by engineer. */
 "Variable name:" = "ชื่อตัวแปร:";
 
 /* No comment provided by engineer. */
@@ -1869,6 +1974,12 @@
 
 /* No comment provided by engineer. */
 "Variables" = "ตัวแปร";
+
+/* No comment provided by engineer. */
+"Variables for all actors and objects" = "ตัวแปรสำหรับนักแสดงและวัตถุทั้งหมด";
+
+/* No comment provided by engineer. */
+"Variables for this actor or object only" = "ตัวแปรสำหรับนักแสดงหรือวัตถุนี้เท่านั้น";
 
 /* No comment provided by engineer. */
 "Version" = "รุ่น";
@@ -1887,6 +1998,9 @@
 
 /* No comment provided by engineer. */
 "Views" = "มุมมอง";
+
+/* No comment provided by engineer. */
+"Visual sensors" = "เซ็นเซอร์ภาพ";
 
 /* No comment provided by engineer. */
 "Wait" = "รอ";
@@ -1962,6 +2076,9 @@
 
 /* No comment provided by engineer. */
 "Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
+
+/* No comment provided by engineer. */
+"Your report was successfully sent!" = "ส่งรายงานของคุณเรียบร้อยแล้ว!";
 
 /* paint */
 "Zoom" = "Zoom";
